feat: refactor image generation to standalone tool page (#504)
* feat: refactor image generation to standalone tool page

- Add new /image-creator route with dedicated UI
- Create ImageGeneration data model with Zod schema
- Implement imageGenerationStore with paginated history
- Add imageGenerationActions for single-task generation
- Support reference images and continuous modification
- Track parentId for iteration chains
- Migrate old picture sessions to new format (mark as hidden)
- Add i18n translations (EN/ZH-Hans)
- Update sidebar and keyboard shortcut navigation

* refactor: optimize image creator page with database storage and React Query

- Add native IndexedDB/SQLite storage for image generation records
- Use React Query for data fetching with infinite scroll pagination
- Simplify zustand store to only hold UI state (currentGeneratingId, currentRecordId)
- Improve image-creator page styling and fix scroll layout issues
- Update migration to use new database storage directly
- Remove localforage dependency for image generation, use native IndexedDB with createdAt index

* fix: history panel expand button not clickable when collapsed

* fix: improve image creator mobile UX and add retry functionality

- Fix ref image delete button being clipped by adding overflow-visible
- Add mobile history drawer accessible via History button
- Optimize mobile input layout with full-width textarea
- Fix history item selected state using ring border instead of background
- Fix image loading by adding base64 prefix for blob data
- Add retry button for failed image generations

* fix: address PR review comments for image creator

- Add FileReader.onerror handler for image upload error handling
- Remove unused Title import from @mantine/core
- Replace console.error with logger utility (getLogger)
- Extract blobToDataUrl helper function to reduce duplication
- Add loading skeleton for history panel initial load state
- Remove unused useAsReference function from imageGeneration

--- a/src/renderer/i18n/locales/ar/translation.json
+++ b/src/renderer/i18n/locales/ar/translation.json
@@ -9,7 +9,10 @@
   "{{count}} file(s) not supported: {{files}}. Supported formats: {{formats}}": "{{count}} ملفات غير مدعومة: {{files}}. التنسيقات المدعومة: {{formats}}",
   "{{count}} file(s) queued for server parsing": "{{count}} ملف(ات) في قائمة الانتظار لتحليل الخادم",
   "{{count}} MCP servers imported": "{{count}} خوادم MCP مستوردة",
+  "A cozy coffee shop interior": "تصميم داخلي لمقهى مريح",
+  "A futuristic city with flying cars": "مدينة مستقبلية مع سيارات طائرة",
   "A provider with this ID already exists. Continuing will overwrite the existing configuration.": "يوجد مزود بهذا المعرف بالفعل. ستؤدي المتابعة إلى الكتابة فوق التكوين الحالي.",
+  "A serene mountain landscape at sunset": "منظر جبلي هادئ عند الغروب",
   "About": "حول",
   "About Chatbox": "حول Chatbox",
   "about-introduction": "عميل سطح مكتب سهل الاستخدام يدعم نماذج الذكاء الصناعي المتقدمة المتعددة، مما يحول تكنولوجيا الذكاء الصناعي المتقدمة إلى أداة إنتاجية سهلة الاستخدام.",
@@ -27,6 +30,7 @@
   "Add MCP Server": "إضافة خادم MCP",
   "Add or Import": "إضافة أو استيراد",
   "Add provider": "إضافة مزود",
+  "Add Reference Image": "إضافة صورة مرجعية",
   "Add Server": "إضافة خادم",
   "Add your first MCP server": "أضف أول خادم MCP لك",
   "advanced": "متقدم",
@@ -37,12 +41,14 @@
   "AI Model Provider": "مقدم نموذج الذكاء الصناعي",
   "ai provider no implemented paint tips": "مزود نموذج الذكاء الاصطناعي الحالي ({{aiProvider}}) لا يدعم قدرات الرسم في هذا الوقت. حاليًا، فقط Chatbox AI وOpenAI وAzure OpenAI يقدمون هذه الميزة. إذا لزم الأمر، يرجى <0>الذهاب إلى الإعدادات</0> وتبديل مزود نموذج الذكاء الاصطناعي.",
   "AI Settings": "إعدادات الذكاء الصناعي",
+  "AI-generated images may not be accurate. Review output carefully.": "الصور التي تم إنشاؤها بواسطة AI قد لا تكون دقيقة. يرجى مراجعة المخرجات بعناية.",
   "AIHubMix integration in Chatbox offers 10% discount": "تكامل AIHubMix في Chatbox يقدم خصم 10%",
   "All": "الكل",
   "All data is stored locally, ensuring privacy and rapid access": "يتم تخزين جميع البيانات محليًا، مما يضمن الخصوصية والوصول السريع",
   "All major AI models in one subscription": "جميع النماذج الرئيسية للذكاء الاصطناعي في حزمة واحدة",
   "All threads": "جميع المحادثات",
   "already existed": "موجود بالفعل",
+  "An abstract painting with vibrant colors": "لوحة تجريدية بألوان نابضة بالحياة",
   "An easy-to-use AI client app": "تطبيق عميل ذكاء اصطناعي سهل الاستخدام",
   "An error occurred while processing your request. Please try again later. If this error continues, please send an email to hi@chatboxai.com for support.": "حدث خطأ أثناء معالجة طلبك. يرجى المحاولة مرة أخرى لاحقًا. إذا استمر هذا الخطأ، يرجى إرسال بريد إلكتروني إلى hi@chatboxai.com للحصول على الدعم.",
   "An error occurred while sending the message.": "حدث خطأ أثناء إرسال الرسالة.",
@@ -64,6 +70,7 @@
   "Are you sure you want to delete the knowledge base": "هل أنت متأكد أنك تريد حذف قاعدة المعرفة؟",
   "Are you sure you want to delete this server?": "هل أنت متأكد أنك تريد حذف هذا الخادم؟",
   "Arguments": "حجج",
+  "Aspect Ratio": "نسبة العرض إلى الارتفاع",
   "assistant": "المساعد",
   "Attach Image": "إرفاق صورة",
   "Attach Link": "إرفاق رابط",
@@ -184,11 +191,14 @@
   "Create": "إنشاء",
   "Create a New Conversation": "إنشاء محادثة جديدة",
   "Create a New Image-Creator Conversation": "إنشاء محادثة جديدة لمنشئ الصور",
+  "Create amazing images": "أنشئ صوراً مذهلة",
   "Create File": "إنشاء ملف",
   "Create First Knowledge Base": "إنشاء أول قاعدة معرفية",
+  "Create Image": "إنشاء صورة",
   "Create Knowledge Base": "إنشاء قاعدة معرفية",
   "Create New Copilot": "إنشاء مساعد طيار جديد",
   "Create your first knowledge base to start adding documents and enhance your AI conversations with contextual information.": "أنشئ قاعدة معارفك الأولى لتبدأ بإضافة المستندات وتعزيز محادثات الذكاء الاصطناعي الخاصة بك بمعلومات سياقية.",
+  "Creating your masterpiece...": "جاري إنشاء تحفتك الفنية...",
   "creative": "إبداعي",
   "Current conversation configured with specific model settings": "المحادثة الحالية مُعدّة بإعدادات نموذج محددة",
   "Current input": "الإدخال الحالي",
@@ -219,7 +229,11 @@
   "Delete Current Session": "حذف الجلسة الحالية",
   "Delete File": "حذف ملف",
   "Delete Knowledge Base": "حذف قاعدة المعرفة",
+  "Delete this record?": "حذف هذا السجل؟",
   "Deploy HTML content to EdgeOne Pages and obtaining an accessible public URL.": "نشر محتوى HTML إلى EdgeOne Pages والحصول على عنوان URL عام يمكن الوصول إليه.",
+  "Describe the image you want to create...": "صف الصورة التي تريد إنشاءها...",
+  "Describe the image you want to generate. Be as detailed as possible for best results.": "صف الصورة التي تريد إنشاءها. كن مفصلاً قدر الإمكان للحصول على أفضل النتائج.",
+  "Describe your vision, and watch as AI transforms your words into stunning visual art.": "صف رؤيتك، وشاهد AI وهو يحول كلماتك إلى فن بصري مذهل.",
   "Description": "الوصف",
   "Details": "التفاصيل",
   "Diagnostic Logs": "سجلات التشخيص",
@@ -331,6 +345,7 @@
   "General Settings": "الإعدادات العامة",
   "Generate More Images Below": "توليد المزيد من الصور أدناه",
   "Generating summary...": "جاري إنشاء الملخص...",
+  "Generation Failed": "فشل التوليد",
   "Get API Key": "احصل على مفتاح API",
   "Get API Token": "الحصول على رمز API",
   "Get better connectivity and stability with the Chatbox desktop application. <a>Download now</a>.": "احصل على أفضل اتصال واستقرار مع تطبيق Chatbox للبرمجيات المكتبية. <a>قم بتحميل الآن</a>.",
@@ -344,7 +359,9 @@
   "Hate speech or harassment": "تحديد أو إصطهار",
   "Here you can add and manage various custom model providers. As long as the provider's API is compatible with the selected API mode, you can seamlessly connect and use it within Chatbox.": "هنا يمكنك إضافة وإدارة مختلف مزودي النماذج المخصصة. طالما أن واجهة برمجة التطبيقات للمزود متوافقة مع وضع واجهة برمجة التطبيقات المحدد، يمكنك الاتصال بها واستخدامها بسلاسة داخل Chatbox.",
   "Hide": "إخفاء",
+  "Hide History": "إخفاء السجل",
   "High": "مرتفع",
+  "History": "السجل",
   "Home Page": "الصفحة الرئيسية",
   "Homepage": "الصفحة الرئيسية",
   "Hotkeys": "مفاتيح السرعة",
@@ -357,6 +374,7 @@
   "Image Creator Intro": "مرحبًا! أنا منشئ الصور في Chatbox، رفيقك الفني المدعوم بالذكاء الاصطناعي المكرس لتحويل كلماتك إلى صور مذهلة. إذا كنت تستطيع أن تحلم بها، يمكنني أن أخلقها - من المناظر الطبيعية الساحرة، الشخصيات الديناميكية، رموز التطبيقات إلى التجريد وما وراءه.\n\nأنا روبوت هادئ، فقط **أخبرني ببساطة بوصف الصورة التي في ذهنك**، وسأركز كل وحدات البكسل الخاصة بي على إنشاء رؤيتك.\n\nلنصنع الفن!",
   "Image Quota": "حصة الصور",
   "Image Style": "نمط الصورة",
+  "Imagine Something New": "تخيّل شيئاً جديداً",
   "Import and Restore": "استيراد واستعادة",
   "Import Error": "خطأ في الاستيراد",
   "Import failed, unsupported data format": "فشل الاستيراد، تنسيق البيانات غير مدعوم",
@@ -380,6 +398,7 @@
   "Knowledge Base": "قاعدة المعرفة",
   "Knowledge Base Debug": "تصحيح قاعدة المعرفة",
   "Knowledge Base functionality is not available on Windows ARM64 due to library compatibility issues. This feature is supported on Windows x64, macOS, and Linux.": "وظيفة قاعدة المعرفة غير متاحة على Windows ARM64 بسبب مشكلات توافق المكتبة. هذه الميزة مدعومة على Windows x64 و macOS و Linux.",
+  "Landscape": "أفقي",
   "Language": "اللغة",
   "Large file detected. Chunks will be loaded in batches of {{count}} to optimize performance.": "تم اكتشاف ملف كبير. سيتم تحميل الأجزاء على دفعات من {{count}} لتحسين الأداء.",
   "Last Session": "الجلسة الأخيرة",
@@ -395,6 +414,7 @@
   "Light Mode": "وضع الضوء",
   "Link Content": "محتوى الرابط",
   "List Files": "قائمة الملفات",
+  "Load More": "تحميل المزيد",
   "Load More Chunks": "تحميل المزيد من الأجزاء",
   "Loading chunks...": "جارٍ تحميل الأجزاء...",
   "Loading files...": "جارٍ تحميل الملفات...",
@@ -469,6 +489,7 @@
   "network proxy error tips": "بسبب عنوان البروكسي الذي قمت بتكوينه كـ {{proxy}}، يرجى التحقق مما إذا كان خادم البروكسي يعمل بشكل صحيح، أو فكر في إزالة عنوان البروكسي من الإعدادات.",
   "New": "جديد",
   "New Chat": "دردشة جديدة",
+  "New Creation": "ابتكار جديد",
   "New Images": "صور جديدة",
   "New knowledge base name": "اسم قاعدة معرفية جديدة",
   "New Thread": "موضوع جديد",
@@ -482,6 +503,7 @@
   "No expiration": "بدون انتهاء",
   "No favorite models": "لا توجد نماذج مفضلة",
   "No files were dropped": "لم يتم إفلات أي ملفات",
+  "No history yet": "لا يوجد سجل بعد",
   "No Knowledge Base Yet": "لا توجد قاعدة معرفية بعد",
   "No licenses found. Please purchase a license to continue.": "لم يتم العثور على أي تراخيص. يرجى شراء ترخيص للمتابعة.",
   "No Limit": "بدون حد",
@@ -532,6 +554,7 @@
   "Please select a model": "الرجاء اختيار نموذج",
   "Please test before saving": "الرجاء الاختبار قبل الحفظ",
   "Please wait about 20 seconds": "يرجى الانتظار حوالي 20 ثانية",
+  "Portrait": "رأسي",
   "pre-sale discount": "خصم قبل البيع",
   "premium": "المميز",
   "Premium Activation": "تفعيل المميز",
@@ -569,6 +592,8 @@
   "Recovering...": "جاري الاسترداد...",
   "Recovery failed": "فشل الاستعادة",
   "RedNote": "ملاحظة حمراء",
+  "Reference": "مرجع",
+  "Reference Images": "صور مرجعية",
   "Refresh": "تحديث",
   "Regulate the volume of historical messages sent to the AI, striking a harmonious balance between depth of comprehension and the efficiency of responses.": "تنظيم حجم الرسائل التاريخية المرسلة إلى الذكاء الاصطناعي، مع تحقيق توازن متناغم بين عمق الفهم وكفاءة الردود.",
   "Remaining/Total Quota": "الحصة المتبقية / الإجمالية",
@@ -645,6 +670,7 @@
   "Show all ({{x}})": "عرض الكل ({{x}})",
   "Show Copilots in New Session": "إظهار المساعدين في محادثة جديدة",
   "show first token latency": "عرض التأخير الأول للرمز",
+  "Show History": "عرض السجل",
   "Show in Thread List": "عرض في قائمة المحادثات",
   "show message timestamp": "عرض طابع زمني للرسالة",
   "show message token count": "عرض عدد الرموز في الرسالة",
@@ -664,6 +690,8 @@
   "Specific model settings": "إعدادات النموذج المحددة",
   "Specific model settings configured for this conversation": "إعدادات النموذج المحددة التي تم تكوينها لهذه المحادثة",
   "Spell Check": "تدقيق إملائي",
+  "Square": "مربع",
+  "Standard": "قياسي",
   "star": "نجمة",
   "Start a New Thread": "بدء موضوع جديد",
   "Start Setup": "بدء الإعداد",
@@ -765,8 +793,10 @@
   "Upgrade": "ترقية",
   "Upload failed: {{error}}": "فشل التحميل: {{error}}",
   "Upload Image": "تحميل الصورة",
+  "Upload Reference Image": "تحميل صورة مرجعية",
   "Upload your first document to get started": "ارفع مستندك الأول للبدء",
   "Upon import, changes will take effect immediately and existing data will be overwritten": "عند الاستيراد، ستصبح التغييرات نافذة على الفور وسيتم الكتابة فوق البيانات الحالية",
+  "Use as Reference": "استخدام كمرجع",
   "Use My Own API Key / Local Model": "استخدام مفتاح API الخاص بي / نموذج محلي",
   "Use proxy to resolve CORS and other network issues": "استخدام البروكسي لحل مشاكل CORS وغيرها من مشاكل الشبكة",
   "Use server parsing": "استخدام تحليل الخادم",
@@ -779,6 +809,7 @@
   "Uses built-in document parsing feature, supports common file types. Free usage, no compute points will be consumed.": "يستخدم ميزة تحليل المستندات المدمجة، ويدعم أنواع الملفات الشائعة. استخدام مجاني، ولا يتم استهلاك نقاط حساب.",
   "version": "الإصدار",
   "Video files are not supported": "ملفات الفيديو غير مدعومة",
+  "View": "عرض",
   "View All Copilots": "عرض جميع مساعدي الطيارين",
   "View Details": "عرض التفاصيل",
   "View historical threads": "عرض المحادثات التاريخية",
