--- a/src/renderer/i18n/locales/de/translation.json
+++ b/src/renderer/i18n/locales/de/translation.json
@@ -9,7 +9,10 @@
   "{{count}} file(s) not supported: {{files}}. Supported formats: {{formats}}": "{{count}} Datei(en) nicht unterstützt: {{files}}. Unterstützte Formate: {{formats}}",
   "{{count}} file(s) queued for server parsing": "{{count}} Datei(en) zur Server-Analyse in die Warteschlange gestellt",
   "{{count}} MCP servers imported": "{{count}} MCP Server importiert",
+  "A cozy coffee shop interior": "Ein gemütliches Café-Interieur",
+  "A futuristic city with flying cars": "Eine futuristische Stadt mit fliegenden Autos",
   "A provider with this ID already exists. Continuing will overwrite the existing configuration.": "Ein Anbieter mit dieser ID existiert bereits. Wenn Sie fortfahren, wird die bestehende Konfiguration überschrieben.",
+  "A serene mountain landscape at sunset": "Eine friedliche Berglandschaft bei Sonnenuntergang",
   "About": "Über",
   "About Chatbox": "Über Chatbox",
   "about-introduction": "Ein benutzerfreundlicher KI-Desktop-Client, der mehrere fortschrittliche KI-Modelle unterstützt und modernste Künstliche Intelligenz in ein benutzerfreundliches Produktivitätstool verwandelt.",
@@ -27,6 +30,7 @@
   "Add MCP Server": "MCP Server hinzufügen",
   "Add or Import": "Hinzufügen oder Importieren",
   "Add provider": "Anbieter hinzufügen",
+  "Add Reference Image": "Referenzbild hinzufügen",
   "Add Server": "Server hinzufügen",
   "Add your first MCP server": "Ihren ersten MCP-Server hinzufügen",
   "advanced": "Erweitert",
@@ -37,12 +41,14 @@
   "AI Model Provider": "KI-Modell Anbieter",
   "ai provider no implemented paint tips": "Der aktuelle AI-Modellanbieter ({{aiProvider}}) unterstützt derzeit keine Zeichenfunktionen. Aktuell bieten nur Chatbox AI, OpenAI und Azure OpenAI diese Funktion an. Falls erforderlich, bitte <0>gehen Sie zu den Einstellungen</0> und wechseln Sie den AI-Modellanbieter.",
   "AI Settings": "KI-Einstellungen",
+  "AI-generated images may not be accurate. Review output carefully.": "AI-generierte Bilder sind möglicherweise nicht korrekt. Überprüfen Sie die Ergebnisse sorgfältig.",
   "AIHubMix integration in Chatbox offers 10% discount": "AIHubMix Integration in Chatbox bietet 10% Rabatt",
   "All": "Alle",
   "All data is stored locally, ensuring privacy and rapid access": "Alle Daten werden lokal gespeichert, um Datenschutz und schnellen Zugriff zu gewährleisten",
   "All major AI models in one subscription": "Alle großen AI-Modelle in einem Abonnement",
   "All threads": "Alle Threads",
   "already existed": "Bereits vorhanden",
+  "An abstract painting with vibrant colors": "Ein abstraktes Gemälde mit leuchtenden Farben",
   "An easy-to-use AI client app": "Eine benutzerfreundliche KI-Client-App",
   "An error occurred while processing your request. Please try again later. If this error continues, please send an email to hi@chatboxai.com for support.": "Beim Verarbeiten Ihrer Anfrage ist ein Fehler aufgetreten. Bitte versuchen Sie es später erneut. Wenn dieser Fehler weiterhin besteht, senden Sie eine E-Mail an hi@chatboxai.com für Unterstützung.",
   "An error occurred while sending the message.": "Ein Fehler ist beim Senden der Nachricht aufgetreten.",
@@ -64,6 +70,7 @@
   "Are you sure you want to delete the knowledge base": "Möchten Sie die Wissensdatenbank wirklich löschen?",
   "Are you sure you want to delete this server?": "Sind Sie sicher, dass Sie diesen Server löschen möchten?",
   "Arguments": "Argumente",
+  "Aspect Ratio": "Seitenverhältnis",
   "assistant": "Assistent",
   "Attach Image": "Bild anhängen",
   "Attach Link": "Link anhängen",
@@ -184,11 +191,14 @@
   "Create": "Erstellen",
   "Create a New Conversation": "Neue Konversation erstellen",
   "Create a New Image-Creator Conversation": "Neues Image-Creator-Gespräch erstellen",
+  "Create amazing images": "Erstelle beeindruckende Bilder",
   "Create File": "Datei erstellen",
   "Create First Knowledge Base": "Erste Wissensdatenbank erstellen",
+  "Create Image": "Bild erstellen",
   "Create Knowledge Base": "Wissensdatenbank erstellen",
   "Create New Copilot": "Neuen Co-Piloten erstellen",
   "Create your first knowledge base to start adding documents and enhance your AI conversations with contextual information.": "Erstellen Sie Ihre erste Wissensdatenbank, um Dokumente hinzuzufügen und Ihre KI-Konversationen mit kontextbezogenen Informationen zu erweitern.",
+  "Creating your masterpiece...": "Ihr Meisterwerk wird erstellt...",
   "creative": "Kreativ",
   "Current conversation configured with specific model settings": "Aktuelle Unterhaltung konfiguriert mit spezifischen Modelleinstellungen",
   "Current input": "Aktuelle Eingabe",
@@ -219,7 +229,11 @@
   "Delete Current Session": "Aktuelle Sitzung löschen",
   "Delete File": "Datei löschen",
   "Delete Knowledge Base": "Wissensdatenbank löschen",
+  "Delete this record?": "Diesen Datensatz löschen?",
   "Deploy HTML content to EdgeOne Pages and obtaining an accessible public URL.": "HTML-Inhalt auf EdgeOne Pages bereitstellen und eine zugängliche öffentliche URL erhalten.",
+  "Describe the image you want to create...": "Beschreibe das Bild, das du erstellen möchtest...",
+  "Describe the image you want to generate. Be as detailed as possible for best results.": "Beschreiben Sie das Bild, das Sie generieren möchten. Seien Sie für die besten Ergebnisse so detailliert wie möglich.",
+  "Describe your vision, and watch as AI transforms your words into stunning visual art.": "Beschreiben Sie Ihre Vision und erleben Sie, wie die AI Ihre Worte in atemberaubende visuelle Kunst verwandelt.",
   "Description": "Beschreibung",
   "Details": "Details",
   "Diagnostic Logs": "Diagnoseprotokolle",
@@ -331,6 +345,7 @@
   "General Settings": "Allgemeine Einstellungen",
   "Generate More Images Below": "Generieren Sie weitere Bilder unten",
   "Generating summary...": "Zusammenfassung wird erstellt...",
+  "Generation Failed": "Generierung fehlgeschlagen",
   "Get API Key": "API-Schlüssel erhalten",
   "Get API Token": "API-Token abrufen",
   "Get better connectivity and stability with the Chatbox desktop application. <a>Download now</a>.": "Erhalten Sie bessere Verbindung und Stabilität mit der Chatbox-Desktop-Anwendung. <a>Jetzt herunterladen</a>.",
@@ -344,7 +359,9 @@
   "Hate speech or harassment": "Hassrede oder Belästigung",
   "Here you can add and manage various custom model providers. As long as the provider's API is compatible with the selected API mode, you can seamlessly connect and use it within Chatbox.": "Hier können Sie verschiedene benutzerdefinierte Modellanbieter hinzufügen und verwalten. Solange die API des Anbieters mit dem ausgewählten API-Modus kompatibel ist, können Sie sie nahtlos mit Chatbox verbinden und verwenden.",
   "Hide": "Ausblenden",
+  "Hide History": "Verlauf ausblenden",
   "High": "Hoch",
+  "History": "Verlauf",
   "Home Page": "Startseite",
   "Homepage": "Startseite",
   "Hotkeys": "Tastenkürzel",
@@ -357,6 +374,7 @@
   "Image Creator Intro": "Hallo! Ich bin Chatbox Image Creator, dein künstlerischer AI-Begleiter, der darauf spezialisiert ist, deine Worte in atemberaubende visuelle Darstellungen zu verwandeln. Wenn du es träumen kannst, kann ich es erschaffen - von verzauberten Landschaften, dynamischen Charakteren, App-Symbolen bis hin zum Abstrakten und darüber hinaus.\n\nIch bin ein ruhiger Roboter, gib mir einfach **die Beschreibung des Bildes, das du im Kopf hast**, und ich werde all meine Pixel darauf verwenden, deine Vision zu erschaffen.\n\nLass uns Kunst machen!",
   "Image Quota": "Bildkontingent",
   "Image Style": "Bildstil",
+  "Imagine Something New": "Stell dir etwas Neues vor",
   "Import and Restore": "Importieren und Wiederherstellen",
   "Import Error": "Importfehler",
   "Import failed, unsupported data format": "Importieren fehlgeschlagen, nicht unterstütztes Datenformat",
@@ -380,6 +398,7 @@
   "Knowledge Base": "Wissensdatenbank",
   "Knowledge Base Debug": "Wissensdatenbank-Debug",
   "Knowledge Base functionality is not available on Windows ARM64 due to library compatibility issues. This feature is supported on Windows x64, macOS, and Linux.": "Die Wissensdatenbank-Funktionalität ist auf Windows ARM64 aufgrund von Bibliothek-Kompatibilitätsproblemen nicht verfügbar. Diese Funktion wird auf Windows x64, macOS und Linux unterstützt.",
+  "Landscape": "Querformat",
   "Language": "Sprache",
   "Large file detected. Chunks will be loaded in batches of {{count}} to optimize performance.": "Große Datei erkannt. Chunks werden in Stapeln von {{count}} geladen, um die Leistung zu optimieren.",
   "Last Session": "Letzte Sitzung",
@@ -395,6 +414,7 @@
   "Light Mode": "Heller Modus",
   "Link Content": "Link-Inhalt",
   "List Files": "Dateien auflisten",
+  "Load More": "Mehr laden",
   "Load More Chunks": "Mehr Blöcke laden",
   "Loading chunks...": "Lade Chunks...",
   "Loading files...": "Dateien werden geladen...",
@@ -469,6 +489,7 @@
   "network proxy error tips": "Da du eine Proxy-Adresse {{proxy}} eingerichtet hast, überprüfe bitte, ob der Proxy-Server ordnungsgemäß funktioniert, oder erwäge, die Proxy-Adresse in den Einstellungen zu entfernen.",
   "New": "Neu",
   "New Chat": "Neuer Chat",
+  "New Creation": "Neue Kreation",
   "New Images": "Neue Bilder",
   "New knowledge base name": "Neuer Wissensdatenbank-Name",
   "New Thread": "Neues Thema",
@@ -482,6 +503,7 @@
   "No expiration": "Kein Ablauf",
   "No favorite models": "Keine Lieblingsmodelle",
   "No files were dropped": "Keine Dateien abgelegt",
+  "No history yet": "Noch kein Verlauf",
   "No Knowledge Base Yet": "Noch keine Wissensdatenbank",
   "No licenses found. Please purchase a license to continue.": "Keine Lizenzen gefunden. Bitte erwerben Sie eine Lizenz, um fortzufahren.",
   "No Limit": "Keine Begrenzung",
@@ -532,6 +554,7 @@
   "Please select a model": "Bitte wählen Sie ein Modell",
   "Please test before saving": "Bitte vor dem Speichern testen",
   "Please wait about 20 seconds": "Bitte warten Sie etwa 20 Sekunden",
+  "Portrait": "Hochformat",
   "pre-sale discount": "Vorverkaufsrabatt",
   "premium": "Premium",
   "Premium Activation": "Premium-Aktivierung",
@@ -569,6 +592,8 @@
   "Recovering...": "Wird wiederhergestellt...",
   "Recovery failed": "Wiederherstellung fehlgeschlagen",
   "RedNote": "Rotnotiz",
+  "Reference": "Referenz",
+  "Reference Images": "Referenzbilder",
   "Refresh": "Aktualisieren",
   "regenerate": "Neu generieren",
   "Regulate the volume of historical messages sent to the AI, striking a harmonious balance between depth of comprehension and the efficiency of responses.": "Regulieren Sie das Volumen historischer Nachrichten, die an die KI gesendet werden, und schaffen Sie ein harmonisches Gleichgewicht zwischen dem Verständnis und der Effizienz der Antworten.",
@@ -646,6 +671,7 @@
   "Show all ({{x}})": "Alle anzeigen ({{x}})",
   "Show Copilots in New Session": "Copilots in neuer Sitzung anzeigen",
   "show first token latency": "Erste Token-Verzögerung anzeigen",
+  "Show History": "Verlauf anzeigen",
   "Show in Thread List": "Im Thread-Verlauf anzeigen",
   "show message timestamp": "Zeitstempel anzeigen",
   "show message token count": "Tokenanzahl anzeigen",
@@ -665,6 +691,8 @@
   "Specific model settings": "Spezifische Modelleinstellungen",
   "Specific model settings configured for this conversation": "Spezifische Modelleinstellungen für diese Konversation konfiguriert",
   "Spell Check": "Rechtschreibprüfung",
+  "Square": "Quadratisch",
+  "Standard": "Standard",
   "star": "Favorit",
   "Start a New Thread": "Neues Thema starten",
   "Start Setup": "Setup starten",
@@ -766,8 +794,10 @@
   "Upgrade": "Upgrade",
   "Upload failed: {{error}}": "Upload fehlgeschlagen: {{error}}",
   "Upload Image": "Bild hochladen",
+  "Upload Reference Image": "Referenzbild hochladen",
   "Upload your first document to get started": "Laden Sie Ihr erstes Dokument hoch, um loszulegen",
   "Upon import, changes will take effect immediately and existing data will be overwritten": "Nach dem Import treten die Änderungen sofort in Kraft und bestehende Daten werden überschrieben",
+  "Use as Reference": "Als Referenz verwenden",
   "Use My Own API Key / Local Model": "Meine eigene API-Schlüssel / Lokales Modell verwenden",
   "Use proxy to resolve CORS and other network issues": "Proxy verwenden, um CORS- und andere Netzwerkprobleme zu lösen",
   "Use server parsing": "Server-Parsing verwenden",
@@ -780,6 +810,7 @@
   "Uses built-in document parsing feature, supports common file types. Free usage, no compute points will be consumed.": "Verwendet die integrierte Dokumenten-Parsing-Funktion, unterstützt gängige Dateitypen. Kostenlose Nutzung, es werden keine Rechenpunkte verbraucht.",
   "version": "Version",
   "Video files are not supported": "Videodateien werden nicht unterstützt",
+  "View": "Ansehen",
   "View All Copilots": "Alle Co-Piloten anzeigen",
   "View Details": "Details ansehen",
   "View historical threads": "Historische Threads anzeigen",
