--- a/src/renderer/i18n/locales/en/translation.json
+++ b/src/renderer/i18n/locales/en/translation.json
@@ -9,7 +9,10 @@
   "{{count}} file(s) not supported: {{files}}. Supported formats: {{formats}}": "{{count}} file(s) not supported: {{files}}. Supported formats: {{formats}}",
   "{{count}} file(s) queued for server parsing": "{{count}} file(s) queued for server parsing",
   "{{count}} MCP servers imported": "{{count}} MCP servers imported",
+  "A cozy coffee shop interior": "A cozy coffee shop interior",
+  "A futuristic city with flying cars": "A futuristic city with flying cars",
   "A provider with this ID already exists. Continuing will overwrite the existing configuration.": "A provider with this ID already exists. Continuing will overwrite the existing configuration.",
+  "A serene mountain landscape at sunset": "A serene mountain landscape at sunset",
   "About": "About",
   "about-introduction": "A user-friendly AI desktop client that supports multiple advanced AI models, transforming cutting-edge artificial intelligence technology into an easy-to-use productivity tool.",
   "about-slogan": "Boost your efficiency with AI, your ultimate copilot for work and learning",
@@ -24,17 +27,21 @@
   "Add MCP Server": "Add MCP Server",
   "Add or Import": "Add or Import",
   "Add provider": "Add provider",
+  "Add reference image": "Add reference image",
+  "Add Reference Image": "Add Reference Image",
   "Add Server": "Add Server",
   "Add your first MCP server": "Add your first MCP server",
   "Advanced image formats are not supported. Please convert to JPG or PNG.": "Advanced image formats are not supported. Please convert to JPG or PNG.",
   "Advanced Mode": "Advanced Mode",
   "Advanced Settings": "Advanced Settings",
   "ai provider no implemented paint tips": "The current AI model provider({{aiProvider}}) does not support painting capabilities at this time. Currently, only Chatbox AI, OpenAI and Azure OpenAI offer this feature. If needed, please <0>go to settings</0> and switch the AI model provider.",
+  "AI-generated images may not be accurate. Review output carefully.": "AI-generated images may not be accurate. Review output carefully.",
   "AIHubMix integration in Chatbox offers 10% discount": "AIHubMix integration in Chatbox offers 10% discount",
   "All": "All",
   "All data is stored locally, ensuring privacy and rapid access": "All data is stored locally, ensuring privacy and rapid access",
   "All major AI models in one subscription": "All major AI models in one subscription",
   "already existed": "already existed",
+  "An abstract painting with vibrant colors": "An abstract painting with vibrant colors",
   "An easy-to-use AI client app": "An easy-to-use AI client app",
   "An error occurred while sending the message.": "An error occurred while sending the message.",
   "An MCP server implementation that provides a tool for dynamic and reflective problem-solving through a structured thinking process.": "An MCP server implementation that provides a tool for dynamic and reflective problem-solving through a structured thinking process.",
@@ -49,6 +56,7 @@
   "Are you sure you want to delete the knowledge base": "Are you sure you want to delete the knowledge base",
   "Are you sure you want to delete this server?": "Are you sure you want to delete this server?",
   "Arguments": "Arguments",
+  "Aspect Ratio": "Aspect Ratio",
   "Attach Image": "Attach Image",
   "Attach Link": "Attach Link",
   "Audio files are not supported": "Audio files are not supported",
@@ -155,11 +163,15 @@
   "Create": "Create",
   "Create a New Conversation": "Create a New Conversation",
   "Create a New Image-Creator Conversation": "Create a New Image-Creator Conversation",
+  "Create amazing images": "Create amazing images",
+  "Create beautiful images with AI": "Create beautiful images with AI",
   "Create File": "Create File",
   "Create First Knowledge Base": "Create First Knowledge Base",
+  "Create Image": "Create Image",
   "Create Knowledge Base": "Create Knowledge Base",
   "Create New Copilot": "Create New Copilot",
   "Create your first knowledge base to start adding documents and enhance your AI conversations with contextual information.": "Create your first knowledge base to start adding documents and enhance your AI conversations with contextual information.",
+  "Creating your masterpiece...": "Creating your masterpiece...",
   "Current conversation configured with specific model settings": "Current conversation configured with specific model settings",
   "Current input": "Current input",
   "current model": "current model",
@@ -185,7 +197,11 @@
   "Delete Current Session": "Delete Current Session",
   "Delete File": "Delete File",
   "Delete Knowledge Base": "Delete Knowledge Base",
+  "Delete this record?": "Delete this record?",
   "Deploy HTML content to EdgeOne Pages and obtaining an accessible public URL.": "Deploy HTML content to EdgeOne Pages and obtaining an accessible public URL.",
+  "Describe the image you want to create...": "Describe the image you want to create...",
+  "Describe the image you want to generate. Be as detailed as possible for best results.": "Describe the image you want to generate. Be as detailed as possible for best results.",
+  "Describe your vision, and watch as AI transforms your words into stunning visual art.": "Describe your vision, and watch as AI transforms your words into stunning visual art.",
   "Details": "Details",
   "Diagnostic Logs": "Diagnostic Logs",
   "Disabled": "Disabled",
@@ -197,6 +213,7 @@
   "Document parser reset to default due to unverified MinerU token": "Document parser reset to default due to unverified MinerU token",
   "Documents": "Documents",
   "Done": "Done",
+  "Download": "Download",
   "Drag and drop files here, or click to browse": "Drag and drop files here, or click to browse",
   "Drop files here": "Drop files here",
   "Due to local processing limitations, <Link>Chatbox AI Service</Link> is recommended for enhanced document processing capabilities and better results.": "Due to local processing limitations, <Link>Chatbox AI Service</Link> is recommended for enhanced document processing capabilities and better results.",
@@ -218,6 +235,7 @@
   "Embedding Model": "Embedding Model",
   "Enable optional anonymous reporting of crash and event data": "Enable optional anonymous reporting of crash and event data",
   "Enjoying Chatbox?": "Enjoying Chatbox?",
+  "Enter a prompt below to get started": "Enter a prompt below to get started",
   "Enter your MinerU API token": "Enter your MinerU API token",
   "Environment Variables": "Environment Variables",
   "Error Reporting": "Error Reporting",
@@ -280,6 +298,7 @@
   "General Settings": "General Settings",
   "Generate More Images Below": "Generate More Images Below",
   "Generating summary...": "Generating summary...",
+  "Generation Failed": "Generation Failed",
   "Get API Key": "Get API Key",
   "Get API Token": "Get API Token",
   "Get Files Meta": "Get Files Meta",
@@ -291,7 +310,9 @@
   "Hassle-free setup": "Hassle-free setup",
   "Hate speech or harassment": "Hate speech or harassment",
   "Hide": "Hide",
+  "Hide History": "Hide History",
   "High": "High",
+  "History": "History",
   "Home Page": "Home Page",
   "Homepage": "Homepage",
   "Hotkeys": "Hotkeys",
@@ -304,6 +325,7 @@
   "Image Creator Intro": "Image Creator Intro",
   "Image Quota": "Image Quota",
   "Image Style": "Image Style",
+  "Imagine Something New": "Imagine Something New",
   "Import and Restore": "Import and Restore",
   "Import Error": "Import Error",
   "Import failed, unsupported data format": "Import failed, unsupported data format",
@@ -324,6 +346,7 @@
   "Knowledge Base": "Knowledge Base",
   "Knowledge Base Debug": "Knowledge Base Debug",
   "Knowledge Base functionality is not available on Windows ARM64 due to library compatibility issues. This feature is supported on Windows x64, macOS, and Linux.": "Knowledge Base functionality is not available on Windows ARM64 due to library compatibility issues. This feature is supported on Windows x64, macOS, and Linux.",
+  "Landscape": "Landscape",
   "Language": "Language",
   "Large file detected. Chunks will be loaded in batches of {{count}} to optimize performance.": "Large file detected. Chunks will be loaded in batches of {{count}} to optimize performance.",
   "Last Session": "Last Session",
@@ -338,6 +361,7 @@
   "Light Mode": "Light Mode",
   "Link Content": "Link Content",
   "List Files": "List Files",
+  "Load More": "Load More",
   "Load More Chunks": "Load More Chunks",
   "Loading chunks...": "Loading chunks...",
   "Loading files...": "Loading files...",
@@ -406,6 +430,7 @@
   "network proxy error tips": "Due to the proxy address you have configured as {{proxy}}, please verify if the proxy server is functioning properly, or consider removing the proxy address from the settings.",
   "New": "New",
   "New Chat": "New Chat",
+  "New Creation": "New Creation",
   "New Images": "New Images",
   "New knowledge base name": "New knowledge base name",
   "New Thread": "New Thread",
@@ -418,6 +443,7 @@
   "No expiration": "No expiration",
   "No favorite models": "No favorite models",
   "No files were dropped": "No files were dropped",
+  "No history yet": "No history yet",
   "No Knowledge Base Yet": "No Knowledge Base Yet",
   "No licenses found. Please purchase a license to continue.": "No licenses found. Please purchase a license to continue.",
   "No Limit": "No Limit",
@@ -466,6 +492,7 @@
   "Please enter an API token": "Please enter an API token",
   "Please select a model": "Please select a model",
   "Please test before saving": "Please test before saving",
+  "Portrait": "Portrait",
   "Preview": "Preview",
   "Privacy Policy": "Privacy Policy",
   "Processing failed": "Processing failed",
@@ -495,6 +522,8 @@
   "Recovering...": "Recovering...",
   "Recovery failed": "Recovery failed",
   "RedNote": "RedNote",
+  "Reference": "Reference",
+  "Reference Images": "Reference Images",
   "Refresh": "Refresh",
   "Regulate the volume of historical messages sent to the AI, striking a harmonious balance between depth of comprehension and the efficiency of responses.": "Regulate the volume of historical messages sent to the AI, striking a harmonious balance between depth of comprehension and the efficiency of responses.",
   "Remaining/Total Quota": "Remaining/Total Quota",
@@ -565,6 +594,7 @@
   "Show all ({{x}})": "Show all ({{x}})",
   "Show Copilots in New Session": "Show Copilots in New Session",
   "show first token latency": "show first token latency",
+  "Show History": "Show History",
   "Show in Thread List": "Show in Thread List",
   "show message timestamp": "show message timestamp",
   "show message token count": "show message token count",
@@ -581,6 +611,8 @@
   "Spam or advertising": "Spam or advertising",
   "Specific model settings": "Specific model settings",
   "Spell Check": "Spell Check",
+  "Square": "Square",
+  "Standard": "Standard",
   "star": "star",
   "Start a New Thread": "Start a New Thread",
   "Starting new thread...": "Starting new thread...",
@@ -660,8 +692,10 @@
   "Upgrade to use server parsing": "Upgrade to use server parsing",
   "Upload failed: {{error}}": "Upload failed: {{error}}",
   "Upload Image": "Upload Image",
+  "Upload Reference Image": "Upload Reference Image",
   "Upload your first document to get started": "Upload your first document to get started",
   "Upon import, changes will take effect immediately and existing data will be overwritten": "Upon import, changes will take effect immediately and existing data will be overwritten",
+  "Use as Reference": "Use as Reference",
   "Use default (first model)": "Use default (first model)",
   "Use My Own API Key / Local Model": "Use My Own API Key / Local Model",
   "Use server parsing": "Use server parsing",
@@ -672,6 +706,7 @@
   "User Terms": "User Terms",
   "Uses built-in document parsing feature, supports common file types. Free usage, no compute points will be consumed.": "Uses built-in document parsing feature, supports common file types. Free usage, no compute points will be consumed.",
   "Video files are not supported": "Video files are not supported",
+  "View": "View",
   "View All Copilots": "View All Copilots",
   "View Details": "View Details",
   "View Message JSON": "View Message JSON",
