--- a/src/renderer/i18n/locales/it-IT/translation.json
+++ b/src/renderer/i18n/locales/it-IT/translation.json
@@ -9,7 +9,10 @@
   "{{count}} file(s) not supported: {{files}}. Supported formats: {{formats}}": "{{count}} file(s) non supportati: {{files}}. Formati supportati: {{formats}}",
   "{{count}} file(s) queued for server parsing": "{{count}} file messi in coda per l'elaborazione del server",
   "{{count}} MCP servers imported": "{{count}} server MCP importati",
+  "A cozy coffee shop interior": "Interno di un'accogliente caffetteria",
+  "A futuristic city with flying cars": "Una città futuristica con auto volanti",
   "A provider with this ID already exists. Continuing will overwrite the existing configuration.": "Un provider con questo ID esiste già. Continuare sovrascriverà la configurazione esistente.",
+  "A serene mountain landscape at sunset": "Un sereno paesaggio montano al tramonto",
   "About": "Informazioni",
   "About Chatbox": "Informazioni su Chatbox",
   "about-introduction": "Un client desktop AI user-friendly che supporta molteplici modelli AI avanzati, trasformando la tecnologia di intelligenza artificiale all'avanguardia in uno strumento di produttività facile da usare.",
@@ -27,6 +30,7 @@
   "Add MCP Server": "Aggiungi MCP Server",
   "Add or Import": "Aggiungi o Importa",
   "Add provider": "Aggiungi fornitore",
+  "Add Reference Image": "Aggiungi immagine di riferimento",
   "Add Server": "Aggiungi Server",
   "Add your first MCP server": "Aggiungi il tuo primo server MCP",
   "advanced": "Avanzate",
@@ -37,12 +41,14 @@
   "AI Model Provider": "Fornitore del modello AI",
   "ai provider no implemented paint tips": "Il fornitore di modelli AI attuale ({{aiProvider}}) non supporta al momento le capacità di pittura. Attualmente, solo Chatbox AI, OpenAI e Azure OpenAI offrono questa funzionalità. Se necessario, <0>vai alle impostazioni</0> e cambia il fornitore del modello AI.",
   "AI Settings": "Impostazioni AI",
+  "AI-generated images may not be accurate. Review output carefully.": "Le immagini generate dall'AI potrebbero non essere accurate. Controlla attentamente l'output.",
   "AIHubMix integration in Chatbox offers 10% discount": "L'integrazione di AIHubMix in Chatbox offre uno sconto del 10%.",
   "All": "Tutti",
   "All data is stored locally, ensuring privacy and rapid access": "Tutti i dati sono archiviati localmente, garantendo privacy e accesso rapido",
   "All major AI models in one subscription": "Tutti i principali modelli di IA in un abbonamento",
   "All threads": "Tutti i thread",
   "already existed": "già esistente",
+  "An abstract painting with vibrant colors": "Un dipinto astratto con colori vivaci",
   "An easy-to-use AI client app": "Un'app client AI facile da usare",
   "An error occurred while processing your request. Please try again later. If this error continues, please send an email to hi@chatboxai.com for support.": "Si è verificato un errore durante il processamento della tua richiesta. Per favore, riprova più tardi. Se questo errore persiste, per favore, invia un'email a hi@chatboxai.com per ottenere supporto.",
   "An error occurred while sending the message.": "Si è verificato un errore durante l'invio del messaggio.",
@@ -64,6 +70,7 @@
   "Are you sure you want to delete the knowledge base": "Vuoi davvero eliminare la base di conoscenza",
   "Are you sure you want to delete this server?": "Sei sicuro di voler eliminare questo server?",
   "Arguments": "Argomenti",
+  "Aspect Ratio": "Rapporto d'aspetto",
   "assistant": "Assistente",
   "Attach Image": "Allega immagine",
   "Attach Link": "Allega link",
@@ -183,11 +190,14 @@
   "Create": "Crea",
   "Create a New Conversation": "Crea una nuova conversazione",
   "Create a New Image-Creator Conversation": "Crea una nuova conversazione Image-Creator",
+  "Create amazing images": "Crea immagini straordinarie",
   "Create File": "Crea File",
   "Create First Knowledge Base": "Crea la prima base di conoscenza",
+  "Create Image": "Crea immagine",
   "Create Knowledge Base": "Crea Base di Conoscenza",
   "Create New Copilot": "Crea nuovo Copilot",
   "Create your first knowledge base to start adding documents and enhance your AI conversations with contextual information.": "Crea la tua prima base di conoscenza per iniziare ad aggiungere documenti e migliorare le tue conversazioni AI con informazioni contestuali.",
+  "Creating your masterpiece...": "Creazione del tuo capolavoro...",
   "creative": "Creativo",
   "Current conversation configured with specific model settings": "Conversazione attuale configurata con impostazioni del modello specifiche",
   "Current input": "Input corrente",
@@ -218,7 +228,11 @@
   "Delete Current Session": "Elimina sessione corrente",
   "Delete File": "Elimina File",
   "Delete Knowledge Base": "Elimina Base di conoscenza",
+  "Delete this record?": "Eliminare questo record?",
   "Deploy HTML content to EdgeOne Pages and obtaining an accessible public URL.": "Distribuire contenuto HTML su EdgeOne Pages e ottenere un URL pubblico accessibile.",
+  "Describe the image you want to create...": "Descrivi l'immagine che desideri creare...",
+  "Describe the image you want to generate. Be as detailed as possible for best results.": "Descrivi l'immagine che vuoi generare. Sii il più dettagliato possibile per ottenere i migliori risultati.",
+  "Describe your vision, and watch as AI transforms your words into stunning visual art.": "Descrivi la tua visione e guarda come l'AI trasforma le tue parole in splendide opere d'arte visiva.",
   "Description": "Descrizione",
   "Details": "Dettagli",
   "Diagnostic Logs": "Registri diagnostici",
@@ -330,6 +344,7 @@
   "General Settings": "Impostazioni generali",
   "Generate More Images Below": "Genera altre immagini sotto",
   "Generating summary...": "Generazione riassunto...",
+  "Generation Failed": "Generazione fallita",
   "Get API Key": "Ottieni chiave API",
   "Get API Token": "Ottieni Token API",
   "Get better connectivity and stability with the Chatbox desktop application. <a>Download now</a>.": "Ottieni una migliore connettività e stabilità con l'applicazione Chatbox per desktop. <a>Scarica ora</a>.",
@@ -343,7 +358,9 @@
   "Hate speech or harassment": "Discorso odioso o molestia",
   "Here you can add and manage various custom model providers. As long as the provider's API is compatible with the selected API mode, you can seamlessly connect and use it within Chatbox.": "Qui puoi aggiungere e gestire vari fornitori di modelli personalizzati. Finché l'API del fornitore è compatibile con la modalità API selezionata, puoi connetterti e utilizzarla senza problemi all'interno di Chatbox.",
   "Hide": "Nascondi",
+  "Hide History": "Nascondi cronologia",
   "High": "Alto",
+  "History": "Cronologia",
   "Home Page": "Pagina iniziale",
   "Homepage": "Pagina iniziale",
   "Hotkeys": "Hotkeys",
@@ -356,6 +373,7 @@
   "Image Creator Intro": "Ciao! Sono Chatbox Image Creator, il tuo compagno artistico AI dedicato a trasformare le tue parole in immagini sorprendenti. Se puoi sognarlo, io posso crearlo—da paesaggi incantevoli, personaggi dinamici, icone di app fino all'astratto e oltre.\n\nSono un robot silenzioso, **basta che tu mi dica la descrizione dell'immagine che hai in mente**, e concentrerò tutti i miei pixel per realizzare la tua visione.\n\nFacciamo arte!",
   "Image Quota": "Quota Immagine",
   "Image Style": "Stile dell'immagine",
+  "Imagine Something New": "Immagina qualcosa di nuovo",
   "Import and Restore": "Importa e ripristina",
   "Import Error": "Errore di importazione",
   "Import failed, unsupported data format": "Importazione fallita, formato dati non supportato",
@@ -379,6 +397,7 @@
   "Knowledge Base": "Base di conoscenza",
   "Knowledge Base Debug": "Debug della Base di Conoscenza",
   "Knowledge Base functionality is not available on Windows ARM64 due to library compatibility issues. This feature is supported on Windows x64, macOS, and Linux.": "La funzionalità Knowledge Base non è disponibile su Windows ARM64 a causa di problemi di compatibilità delle librerie. Questa funzionalità è supportata su Windows x64, macOS e Linux.",
+  "Landscape": "Orizzontale",
   "Language": "Lingua",
   "Large file detected. Chunks will be loaded in batches of {{count}} to optimize performance.": "File di grandi dimensioni rilevato. I chunk verranno caricati in lotti di {{count}} per ottimizzare le prestazioni.",
   "Last Session": "Ultima sessione",
@@ -394,6 +413,7 @@
   "Light Mode": "Modalità chiara",
   "Link Content": "Contenuto del collegamento",
   "List Files": "Elenca File",
+  "Load More": "Carica altro",
   "Load More Chunks": "Carica altri blocchi",
   "Loading chunks...": "Caricamento dei blocchi...",
   "Loading files...": "Caricamento file...",
@@ -468,6 +488,7 @@
   "network proxy error tips": "A causa dell'indirizzo proxy configurato come {{proxy}}, verifica se il server proxy funziona correttamente o considera di rimuovere l'indirizzo proxy dalle impostazioni.",
   "New": "Nuovo",
   "New Chat": "Nuova Chat",
+  "New Creation": "Nuova creazione",
   "New Images": "Nuove immagini",
   "New knowledge base name": "Nuovo nome base di conoscenza",
   "New Thread": "Nuovo thread",
@@ -481,6 +502,7 @@
   "No expiration": "Nessuna scadenza",
   "No favorite models": "Nessun modello preferito",
   "No files were dropped": "Nessun file è stato rilasciato",
+  "No history yet": "Ancora nessuna cronologia",
   "No Knowledge Base Yet": "Ancora nessuna base di conoscenza",
   "No licenses found. Please purchase a license to continue.": "Nessuna licenza trovata. Acquistare una licenza per continuare.",
   "No Limit": "Nessun limite",
@@ -531,6 +553,7 @@
   "Please select a model": "Si prega di selezionare un modello",
   "Please test before saving": "Si prega di testare prima di salvare",
   "Please wait about 20 seconds": "Attendi circa 20 secondi",
+  "Portrait": "Ritratto",
   "pre-sale discount": "sconto pre-vendita",
   "premium": "premium",
   "Premium Activation": "Attivazione Premium",
@@ -568,6 +591,8 @@
   "Recovering...": "Recupero...",
   "Recovery failed": "Recupero fallito",
   "RedNote": "Nota Rossa",
+  "Reference": "Riferimento",
+  "Reference Images": "Immagini di riferimento",
   "Refresh": "Aggiorna",
   "Regulate the volume of historical messages sent to the AI, striking a harmonious balance between depth of comprehension and the efficiency of responses.": "Regola il volume dei messaggi storici inviati all'IA, trovando un equilibrio armonioso tra la profondità di comprensione e l'efficienza delle risposte.",
   "Remaining/Total Quota": "Quota rimanente/totale",
@@ -644,6 +669,7 @@
   "Show all ({{x}})": "Mostra tutti ({{x}})",
   "Show Copilots in New Session": "Mostra Copilot nella nuova sessione",
   "show first token latency": "Mostra latenza del primo token",
+  "Show History": "Mostra cronologia",
   "Show in Thread List": "Mostra nella lista dei thread",
   "show message timestamp": "Mostra timestamp del messaggio",
   "show message token count": "Mostra conteggio token del messaggio",
@@ -663,6 +689,8 @@
   "Specific model settings": "Impostazioni specifiche del modello",
   "Specific model settings configured for this conversation": "Impostazioni specifiche del modello configurate per questa conversazione",
   "Spell Check": "Controllo ortografico",
+  "Square": "Quadrato",
+  "Standard": "Standard",
   "star": "Aggiungi ai preferiti",
   "Start a New Thread": "Inizia un nuovo thread",
   "Start Setup": "Avvia configurazione",
@@ -763,8 +791,10 @@
   "Upgrade": "Fai l'upgrade",
   "Upload failed: {{error}}": "Caricamento fallito: {{error}}",
   "Upload Image": "Carica immagine",
+  "Upload Reference Image": "Carica immagine di riferimento",
   "Upload your first document to get started": "Carica il tuo primo documento per iniziare",
   "Upon import, changes will take effect immediately and existing data will be overwritten": "All'importazione, le modifiche avranno effetto immediato e i dati esistenti saranno sovrascritti",
+  "Use as Reference": "Usa come riferimento",
   "Use My Own API Key / Local Model": "Usa la mia API Key / Modello locale",
   "Use proxy to resolve CORS and other network issues": "Usa proxy per risolvere problemi di CORS e altri problemi di rete",
   "Use server parsing": "THOUGHT: The user wants to translate \"Use server parsing\" to Italian.\nI will translate \"Use\" as \"Usa\" and \"server parsing\" as \"analisi lato server\" or \"parsing del server\". \"Analisi lato server\" sounds more natural and technical for UI.Usa analisi lato server",
@@ -777,6 +807,7 @@
   "Uses built-in document parsing feature, supports common file types. Free usage, no compute points will be consumed.": "Utilizza la funzione integrata di analisi dei documenti, supporta i tipi di file comuni. Utilizzo gratuito, non verranno consumati punti di calcolo.",
   "version": "Versione",
   "Video files are not supported": "File video non supportati",
+  "View": "Visualizza",
   "View All Copilots": "Visualizza tutti i Copilot",
   "View Details": "Vista Dettagli",
   "View historical threads": "Visualizza thread storici",
