--- a/src/renderer/i18n/locales/ja/translation.json
+++ b/src/renderer/i18n/locales/ja/translation.json
@@ -9,7 +9,10 @@
   "{{count}} file(s) not supported: {{files}}. Supported formats: {{formats}}": "{{count}}個のファイルはサポートされていません: {{files}}。サポートされている形式: {{formats}}",
   "{{count}} file(s) queued for server parsing": "{{count}} 個のファイルがサーバー解析のためキューに登録されました",
   "{{count}} MCP servers imported": "{{count}} MCPサーバーがインポートされました",
+  "A cozy coffee shop interior": "居心地の良いコーヒーショップの店内",
+  "A futuristic city with flying cars": "空飛ぶ車が走る未来都市",
   "A provider with this ID already exists. Continuing will overwrite the existing configuration.": "このIDの提供方が既に存在します。続行すると、既存の設定が上書きされます。",
+  "A serene mountain landscape at sunset": "夕暮れ時の穏やかな山の風景",
   "About": "情報",
   "About Chatbox": "Chatboxについて",
   "about-introduction": "複数の先進的なAIモデルをサポートするユーザーフレンドリーなAIデスクトップクライアントで、最先端の人工知能技術を使いやすい生産性ツールに変えます。",
@@ -27,6 +30,7 @@
   "Add MCP Server": "MCP Server を追加",
   "Add or Import": "追加またはインポート",
   "Add provider": "プロバイダーを追加",
+  "Add Reference Image": "参照画像を追加",
   "Add Server": "サーバーを追加",
   "Add your first MCP server": "最初のMCPサーバーを追加",
   "advanced": "高度",
@@ -37,12 +41,14 @@
   "AI Model Provider": "AIモデル提供者",
   "ai provider no implemented paint tips": "現在のAIモデルプロバイダー({{aiProvider}})は、描画機能をサポートしていません。現在、描画機能はChatbox AI、OpenAI、およびAzure OpenAIのみが提供しています。必要であれば、<0>設定に進んで</0>AIモデルプロバイダーを切り替えてください。",
   "AI Settings": "AI設定",
+  "AI-generated images may not be accurate. Review output carefully.": "AI生成画像は正確でない場合があります。出力を慎重に確認してください。",
   "AIHubMix integration in Chatbox offers 10% discount": "ChatboxでのAIHubMix連携で10%割引",
   "All": "すべて",
   "All data is stored locally, ensuring privacy and rapid access": "すべてのデータはローカルに保存され、プライバシーと迅速なアクセスを保証",
   "All major AI models in one subscription": "すべての主要なAIモデルを1つのサブスクリプションで使用",
   "All threads": "すべてのスレッド",
   "already existed": "すでに存在します",
+  "An abstract painting with vibrant colors": "鮮やかな色彩の抽象画",
   "An easy-to-use AI client app": "使いやすいAIクライアントアプリ",
   "An error occurred while processing your request. Please try again later. If this error continues, please send an email to hi@chatboxai.com for support.": "リクエストの処理中にエラーが発生しました。後でもう一度お試しください。このエラーが続く場合は、hi@chatboxai.comにメールを送信してください。",
   "An error occurred while sending the message.": "メッセージの送信中にエラーが発生しました。",
@@ -64,6 +70,7 @@
   "Are you sure you want to delete the knowledge base": "ナレッジベースを本当に削除しますか",
   "Are you sure you want to delete this server?": "このサーバーを削除してもよろしいですか？",
   "Arguments": "引数",
+  "Aspect Ratio": "アスペクト比",
   "assistant": "アシスタント",
   "Attach Image": "画像を添付",
   "Attach Link": "リンクを添付",
@@ -184,11 +191,14 @@
   "Create": "作成",
   "Create a New Conversation": "新しい会話を作成",
   "Create a New Image-Creator Conversation": "新しい画像作成会話を作成",
+  "Create amazing images": "素晴らしい画像を生成",
   "Create File": "ファイルを作成",
   "Create First Knowledge Base": "最初の知識ベースを作成",
+  "Create Image": "画像を作成",
   "Create Knowledge Base": "知識ベースを作成",
   "Create New Copilot": "新しいコパイロットを作成",
   "Create your first knowledge base to start adding documents and enhance your AI conversations with contextual information.": "最初のナレッジベースを作成してドキュメントを追加し、コンテキスト情報でAI会話を強化しましょう。",
+  "Creating your masterpiece...": "傑作を生成しています...",
   "creative": "クリエイティブ",
   "Current conversation configured with specific model settings": "現在の会話は特定のモデル設定で構成されています",
   "Current input": "現在の入力",
@@ -219,7 +229,11 @@
   "Delete Current Session": "現在のセッションを削除",
   "Delete File": "ファイルを削除",
   "Delete Knowledge Base": "知識ベースを削除",
+  "Delete this record?": "この記録を削除しますか？",
   "Deploy HTML content to EdgeOne Pages and obtaining an accessible public URL.": "HTMLコンテンツをEdgeOne Pagesにデプロイし、アクセス可能な公開URLを取得する。",
+  "Describe the image you want to create...": "作成したい画像を説明してください...",
+  "Describe the image you want to generate. Be as detailed as possible for best results.": "生成したい画像を説明してください。最良の結果を得るために、できるだけ詳細に入力してください。",
+  "Describe your vision, and watch as AI transforms your words into stunning visual art.": "あなたのビジョンを説明してください。AI があなたの言葉を素晴らしいビジュアルアートへと変える様子をご覧ください。",
   "Description": "説明",
   "Details": "詳細",
   "Diagnostic Logs": "診断ログ",
@@ -331,6 +345,7 @@
   "General Settings": "一般設定",
   "Generate More Images Below": "以下でさらに画像を生成",
   "Generating summary...": "要約を生成中...",
+  "Generation Failed": "生成に失敗しました",
   "Get API Key": "API キーを取得",
   "Get API Token": "APIトークンを取得",
   "Get better connectivity and stability with the Chatbox desktop application. <a>Download now</a>.": "Chatboxデスクトップアプリを使用して、より良い接続と安定性を得てください。<a>今すぐダウンロード</a>。",
@@ -344,7 +359,9 @@
   "Hate speech or harassment": "憎悪発言または虐待",
   "Here you can add and manage various custom model providers. As long as the provider's API is compatible with the selected API mode, you can seamlessly connect and use it within Chatbox.": "ここでは、さまざまなカスタムモデルプロバイダーを追加および管理できます。プロバイダーのAPIが選択したAPIモードと互換性がある限り、Chatbox内でシームレスに接続して使用できます。",
   "Hide": "非表示",
+  "Hide History": "履歴を非表示",
   "High": "高",
+  "History": "履歴",
   "Home Page": "ホームページ",
   "Homepage": "ホームページ",
   "Hotkeys": "ショートカットキー",
@@ -357,6 +374,7 @@
   "Image Creator Intro": "こんにちは！私はChatbox Image Creator、あなたのアーティスティックなAIコンパニオンです。あなたの言葉を魅力的なビジュアルに変えることに特化しています。あなたが夢見ることができれば、私が創造できますー魅惑的な風景、ダイナミックなキャラクター、アプリアイコンから抽象的なものまで。\n\n私は静かなロボットです、だから**単にあなたが心に描くイメージの説明を教えてください**、そして私は私の全ピクセルを集中してあなたのビジョンを形作ります。\n\nアートを作りましょう！",
   "Image Quota": "画像クォータ",
   "Image Style": "画像スタイル",
+  "Imagine Something New": "新しい何かを想像する",
   "Import and Restore": "インポートと復元",
   "Import Error": "インポートエラー",
   "Import failed, unsupported data format": "インポート失敗、サポートされていないデータ形式",
@@ -380,6 +398,7 @@
   "Knowledge Base": "知識ベース",
   "Knowledge Base Debug": "知識ベース デバッグ",
   "Knowledge Base functionality is not available on Windows ARM64 due to library compatibility issues. This feature is supported on Windows x64, macOS, and Linux.": "知識ベース機能は、ライブラリの互換性の問題によりWindows ARM64ではご利用いただけません。この機能はWindows x64、macOS、およびLinuxでサポートされています。",
+  "Landscape": "横長",
   "Language": "言語",
   "Large file detected. Chunks will be loaded in batches of {{count}} to optimize performance.": "大きなファイルが検出されました。パフォーマンス最適化のため、チャンクは{{count}}個のバッチで読み込まれます。",
   "Last Session": "前回のセッション",
@@ -395,6 +414,7 @@
   "Light Mode": "ライトモード",
   "Link Content": "リンクコンテンツ",
   "List Files": "ファイル一覧",
+  "Load More": "さらに読み込む",
   "Load More Chunks": "さらにチャンクを読み込む",
   "Loading chunks...": "チャンクを読み込み中...",
   "Loading files...": "ファイルを読み込み中...",
@@ -469,6 +489,7 @@
   "network proxy error tips": "プロキシアドレスが設定されています {{proxy}}。プロキシサーバーが正常に機能しているか確認するか、設定からプロキシアドレスを削除することを検討してください。",
   "New": "新規",
   "New Chat": "新しいチャット",
+  "New Creation": "新規作成",
   "New Images": "新しい画像",
   "New knowledge base name": "新しい知識ベースの名前",
   "New Thread": "新しいスレッド",
@@ -482,6 +503,7 @@
   "No expiration": "期限なし",
   "No favorite models": "お気に入りモデルなし",
   "No files were dropped": "ファイルがドロップされませんでした",
+  "No history yet": "履歴はまだありません",
   "No Knowledge Base Yet": "まだナレッジベースがありません",
   "No licenses found. Please purchase a license to continue.": "ライセンスが見つかりません。続行するには、ライセンスをご購入ください。",
   "No Limit": "無制限",
@@ -532,6 +554,7 @@
   "Please select a model": "モデルを選択してください",
   "Please test before saving": "保存する前にテストしてください",
   "Please wait about 20 seconds": "約20秒お待ちください",
+  "Portrait": "ポートレート",
   "pre-sale discount": "プレセール割引",
   "premium": "プレミアム",
   "Premium Activation": "プレミアムの有効化",
@@ -569,6 +592,8 @@
   "Recovering...": "復元中...",
   "Recovery failed": "復旧失敗",
   "RedNote": "レッドノート",
+  "Reference": "参照",
+  "Reference Images": "参照画像",
   "Refresh": "リフレッシュ",
   "regenerate": "再生成",
   "Regulate the volume of historical messages sent to the AI, striking a harmonious balance between depth of comprehension and the efficiency of responses.": "AIに送信される歴史的メッセージの量を調整し、理解の深さと応答の効率の間に調和のとれたバランスを見つけます。",
@@ -646,6 +671,7 @@
   "Show all ({{x}})": "すべて表示 ({{x}})",
   "Show Copilots in New Session": "新しいセッションでコパイロットを表示",
   "show first token latency": "最初のトークンの遅延を表示",
+  "Show History": "履歴を表示",
   "Show in Thread List": "スレッドリストに表示",
   "show message timestamp": "メッセージのタイムスタンプを表示",
   "show message token count": "メッセージのトークン数を表示",
@@ -665,6 +691,8 @@
   "Specific model settings": "特定のモデル設定",
   "Specific model settings configured for this conversation": "この会話に対して設定された特定のモデル設定",
   "Spell Check": "スペルチェック",
+  "Square": "正方形",
+  "Standard": "標準",
   "star": "スター",
   "Start a New Thread": "新しいスレッドを開始",
   "Start Setup": "セットアップを開始",
@@ -766,8 +794,10 @@
   "Upgrade": "アップグレード",
   "Upload failed: {{error}}": "アップロードに失敗しました: {{error}}",
   "Upload Image": "画像をアップロード",
+  "Upload Reference Image": "参照画像をアップロード",
   "Upload your first document to get started": "まずは最初のドキュメントをアップロードしてください",
   "Upon import, changes will take effect immediately and existing data will be overwritten": "インポート後、変更はすぐに反映され、既存のデータは上書きされます",
+  "Use as Reference": "参照として使用",
   "Use My Own API Key / Local Model": "自分のAPIキー/ローカルモデルを使用",
   "Use proxy to resolve CORS and other network issues": "プロキシを使用して CORS とその他のネットワーク問題を解決",
   "Use server parsing": "サーバー解析を使用",
@@ -780,6 +810,7 @@
   "Uses built-in document parsing feature, supports common file types. Free usage, no compute points will be consumed.": "組み込みのドキュメント解析機能を使用し、一般的なファイルタイプをサポートしています。無料で利用でき、コンピュートポイントは消費されません。",
   "version": "バージョン",
   "Video files are not supported": "動画ファイルはサポートされていません",
+  "View": "表示",
   "View All Copilots": "すべてのコパイロットを表示",
   "View Details": "詳細を見る",
   "View historical threads": "過去のスレッドを表示",
