--- a/src/renderer/i18n/locales/ru/translation.json
+++ b/src/renderer/i18n/locales/ru/translation.json
@@ -9,7 +9,10 @@
   "{{count}} file(s) not supported: {{files}}. Supported formats: {{formats}}": "{{count}} файл(ы) не поддерживаются: {{files}}. Поддерживаемые форматы: {{formats}}",
   "{{count}} file(s) queued for server parsing": "{{count}} файлов поставлено в очередь для обработки на сервере",
   "{{count}} MCP servers imported": "{{count}} MCP серверов импортировано",
+  "A cozy coffee shop interior": "Уютный интерьер кофейни",
+  "A futuristic city with flying cars": "Футуристический город с летающими машинами",
   "A provider with this ID already exists. Continuing will overwrite the existing configuration.": "Поставщик с этим ID уже существует. Продолжение перезапишет существующую конфигурацию.",
+  "A serene mountain landscape at sunset": "Безмятежный горный пейзаж на закате",
   "About": "О нас",
   "About Chatbox": "О приложении Chatbox",
   "about-introduction": "Простой в использовании настольный клиент искусственного интеллекта, поддерживающий несколько передовых моделей искусственного интеллекта, превращающий передовые технологии искусственного интеллекта в простой и удобный инструмент для повышения производительности.",
@@ -27,6 +30,7 @@
   "Add MCP Server": "Добавить MCP Server",
   "Add or Import": "Добавить или Импортировать",
   "Add provider": "Добавить провайдера",
+  "Add Reference Image": "Добавить референсное изображение",
   "Add Server": "Добавить Сервер",
   "Add your first MCP server": "Добавить ваш первый MCP сервер",
   "advanced": "Расширенные",
@@ -37,12 +41,14 @@
   "AI Model Provider": "Поставщик модели AI",
   "ai provider no implemented paint tips": "Текущий провайдер AI модели ({{aiProvider}}) временно не поддерживает функцию рисования. В настоящее время данная функция поддерживается только Chatbox AI, OpenAI и Azure OpenAI. Если это необходимо, пожалуйста, <0>перейдите в настройки</0>, чтобы сменить провайдера AI модели.",
   "AI Settings": "Настройки ИИ",
+  "AI-generated images may not be accurate. Review output carefully.": "Изображения, созданные AI, могут быть неточными. Внимательно проверяйте результат.",
   "AIHubMix integration in Chatbox offers 10% discount": "Интеграция AIHubMix в Chatbox предлагает скидку 10%",
   "All": "Все",
   "All data is stored locally, ensuring privacy and rapid access": "Все данные хранятся локально, обеспечивая конфиденциальность и быстрый доступ",
   "All major AI models in one subscription": "Все основные AI-модели в одной подписке",
   "All threads": "Все темы",
   "already existed": "уже существует",
+  "An abstract painting with vibrant colors": "Абстрактная картина в ярких красках",
   "An easy-to-use AI client app": "Простое в использовании приложение для работы с искусственным интеллектом",
   "An error occurred while processing your request. Please try again later. If this error continues, please send an email to hi@chatboxai.com for support.": "Произошла ошибка при обработке вашего запроса. Пожалуйста, попробуйте снова позже. Если эта ошибка продолжается, пожалуйста, отправьте электронное письмо на hi@chatboxai.com для получения поддержки.",
   "An error occurred while sending the message.": "Произошла ошибка при отправке сообщения.",
@@ -64,6 +70,7 @@
   "Are you sure you want to delete the knowledge base": "Вы уверены, что хотите удалить базу знаний",
   "Are you sure you want to delete this server?": "Вы уверены, что хотите удалить этот сервер?",
   "Arguments": "Аргументы",
+  "Aspect Ratio": "Соотношение сторон",
   "assistant": "Ассистент",
   "Attach Image": "Прикрепить изображение",
   "Attach Link": "Прикрепить ссылку",
@@ -184,11 +191,14 @@
   "Create": "Создать",
   "Create a New Conversation": "Создать новый разговор",
   "Create a New Image-Creator Conversation": "Создать новый разговор с Image-Creator",
+  "Create amazing images": "Создавайте потрясающие изображения",
   "Create File": "Создать файл",
   "Create First Knowledge Base": "Создать первую базу знаний",
+  "Create Image": "Создать изображение",
   "Create Knowledge Base": "Создать базу знаний",
   "Create New Copilot": "Создать нового Copilot",
   "Create your first knowledge base to start adding documents and enhance your AI conversations with contextual information.": "Создайте свою первую базу знаний, чтобы начать добавлять документы и улучшить ваши AI-разговоры с контекстной информацией.",
+  "Creating your masterpiece...": "Создание вашего шедевра...",
   "creative": "Творческий",
   "Current conversation configured with specific model settings": "Текущий разговор сконфигурирован со специфическими настройками модели",
   "Current input": "Текущий ввод",
@@ -219,7 +229,11 @@
   "Delete Current Session": "Удалить текущую сессию",
   "Delete File": "Удалить файл",
   "Delete Knowledge Base": "Удалить базу знаний",
+  "Delete this record?": "Удалить эту запись?",
   "Deploy HTML content to EdgeOne Pages and obtaining an accessible public URL.": "Развертывание HTML-контента на EdgeOne Pages и получение доступного публичного URL.",
+  "Describe the image you want to create...": "Опишите изображение, которое вы хотите создать...",
+  "Describe the image you want to generate. Be as detailed as possible for best results.": "Опишите изображение, которое вы хотите сгенерировать. Будьте максимально подробны для получения наилучших результатов.",
+  "Describe your vision, and watch as AI transforms your words into stunning visual art.": "Опишите свое видение, и наблюдайте, как AI превращает ваши слова в потрясающие произведения визуального искусства.",
   "Description": "Описание",
   "Details": "Детали",
   "Diagnostic Logs": "Диагностические журналы",
@@ -331,6 +345,7 @@
   "General Settings": "Общие настройки",
   "Generate More Images Below": "Создать больше изображений ниже",
   "Generating summary...": "Генерирование сводки...",
+  "Generation Failed": "Ошибка генерации",
   "Get API Key": "Получить API ключ",
   "Get API Token": "Получить токен API",
   "Get better connectivity and stability with the Chatbox desktop application. <a>Download now</a>.": "Получите лучшую совместимость и стабильность с помощью приложения Chatbox для рабочего стола. <a>Скачать сейчас</a>.",
@@ -344,7 +359,9 @@
   "Hate speech or harassment": "Неприемлемые высказывания или оскорбления",
   "Here you can add and manage various custom model providers. As long as the provider's API is compatible with the selected API mode, you can seamlessly connect and use it within Chatbox.": "Здесь вы можете добавлять и управлять различными пользовательскими поставщиками моделей. Пока API-интерфейс поставщика совместим с выбранным режимом API, вы можете без проблем подключиться и использовать его в Chatbox.",
   "Hide": "Скрыть",
+  "Hide History": "Скрыть историю",
   "High": "Высокий",
+  "History": "История",
   "Home Page": "Домашняя страница",
   "Homepage": "Домашняя страница",
   "Hotkeys": "Горячие клавиши",
@@ -357,6 +374,7 @@
   "Image Creator Intro": "Привет! Я Chatbox Image Creator, ваш художественный AI-соратник, предан созданию поразительных визуальных образов из ваших слов. Если вы можете это мечтать, я могу это создать — от очаровывающих пейзажей, динамичных персонажей, значков приложений до абстракции и за её пределы.\n\nЯ тихий робот, просто **скажите мне описание изображения, которое у вас в голове**, и я сосредоточу все мои пиксели на воплощении вашего видения.\n\nДавайте творить искусство!",
   "Image Quota": "Квота изображений",
   "Image Style": "Стиль изображения",
+  "Imagine Something New": "Придумайте что-то новое",
   "Import and Restore": "Импорт и восстановление",
   "Import Error": "Ошибка импорта",
   "Import failed, unsupported data format": "Ошибка импорта, неподдерживаемый формат данных",
@@ -380,6 +398,7 @@
   "Knowledge Base": "База знаний",
   "Knowledge Base Debug": "Отладка базы знаний",
   "Knowledge Base functionality is not available on Windows ARM64 due to library compatibility issues. This feature is supported on Windows x64, macOS, and Linux.": "Функциональность {{Knowledge Base}} недоступна на {{Windows ARM64}} из-за проблем совместимости библиотек. Эта функция поддерживается на {{Windows x64}}, {{macOS}} и {{Linux}}.",
+  "Landscape": "Альбомная",
   "Language": "Язык",
   "Large file detected. Chunks will be loaded in batches of {{count}} to optimize performance.": "Обнаружен большой файл. Чанки будут загружены партиями по {{count}} для оптимизации производительности.",
   "Last Session": "Последняя сессия",
@@ -395,6 +414,7 @@
   "Light Mode": "Светлый режим",
   "Link Content": "Содержимое ссылки",
   "List Files": "Список файлов",
+  "Load More": "Загрузить еще",
   "Load More Chunks": "Загрузить больше фрагментов",
   "Loading chunks...": "Загрузка фрагментов...",
   "Loading files...": "Загрузка файлов...",
@@ -469,6 +489,7 @@
   "network proxy error tips": "Поскольку вы настроили адрес прокси {{proxy}}, пожалуйста, проверьте, работает ли прокси-сервер правильно, или рассмотрите возможность удаления адреса прокси из настроек.",
   "New": "Новый",
   "New Chat": "Новый чат",
+  "New Creation": "Новое творение",
   "New Images": "Новые изображения",
   "New knowledge base name": "Новое название базы знаний",
   "New Thread": "Новая Тема",
@@ -482,6 +503,7 @@
   "No expiration": "Без срока действия",
   "No favorite models": "Нет избранных моделей",
   "No files were dropped": "Файлы не были сброшены",
+  "No history yet": "Пока нет истории",
   "No Knowledge Base Yet": "Нет базы знаний пока",
   "No licenses found. Please purchase a license to continue.": "Лицензии не найдены. Пожалуйста, приобретите лицензию, чтобы продолжить.",
   "No Limit": "Без ограничений",
@@ -532,6 +554,7 @@
   "Please select a model": "Пожалуйста, выберите модель",
   "Please test before saving": "Пожалуйста, проверьте перед сохранением",
   "Please wait about 20 seconds": "Пожалуйста, подождите примерно 20 секунд",
+  "Portrait": "Портрет",
   "pre-sale discount": "скидка на предзаказ",
   "premium": "премиум",
   "Premium Activation": "Активация премиум",
@@ -569,6 +592,8 @@
   "Recovering...": "Восстановление...",
   "Recovery failed": "Восстановление не удалось",
   "RedNote": "Красная Заметка",
+  "Reference": "Ссылка",
+  "Reference Images": "Референсные изображения",
   "Refresh": "Обновить",
   "regenerate": "Перегенерировать",
   "Regulate the volume of historical messages sent to the AI, striking a harmonious balance between depth of comprehension and the efficiency of responses.": "Регулируйте объем исторических сообщений, отправляемых ИИ, достигая гармоничного баланса между глубиной понимания и эффективностью ответов.",
@@ -646,6 +671,7 @@
   "Show all ({{x}})": "Показать все ({{x}})",
   "Show Copilots in New Session": "Показывать Копилотов в новой беседе",
   "show first token latency": "Показать задержку первого токена",
+  "Show History": "Показать историю",
   "Show in Thread List": "Показать в списке тем",
   "show message timestamp": "Показать временную метку сообщения",
   "show message token count": "Показать количество токенов в сообщении",
@@ -665,6 +691,8 @@
   "Specific model settings": "Специфические настройки модели",
   "Specific model settings configured for this conversation": "Специфические настройки модели, настроенные для этого разговора",
   "Spell Check": "Проверка орфографии",
+  "Square": "Квадрат",
+  "Standard": "Стандартный",
   "star": "Добавить в избранное",
   "Start a New Thread": "Начать новую тему",
   "Start Setup": "Начать настройку",
@@ -766,8 +794,10 @@
   "Upgrade": "Обновить",
   "Upload failed: {{error}}": "Не удалось загрузить: {{error}}",
   "Upload Image": "Загрузить изображение",
+  "Upload Reference Image": "Загрузить опорное изображение",
   "Upload your first document to get started": "Загрузите свой первый документ, чтобы начать",
   "Upon import, changes will take effect immediately and existing data will be overwritten": "После импорта изменения вступят в силу немедленно, а существующие данные будут перезаписаны",
+  "Use as Reference": "Использовать как образец",
   "Use My Own API Key / Local Model": "Использовать свой API Key / Локальная модель",
   "Use proxy to resolve CORS and other network issues": "Использовать прокси для решения проблем CORS и других сетевых проблем",
   "Use server parsing": "Использовать серверный анализ",
@@ -780,6 +810,7 @@
   "Uses built-in document parsing feature, supports common file types. Free usage, no compute points will be consumed.": "Использует встроенную функцию анализа документов, поддерживает распространенные типы файлов. Бесплатное использование, вычислительные баллы не расходуются.",
   "version": "Версия",
   "Video files are not supported": "Видеофайлы не поддерживаются",
+  "View": "Просмотр",
   "View All Copilots": "Просмотреть всех Copilots",
   "View Details": "Посмотреть детали",
   "View historical threads": "Просмотреть историю тем",
