--- a/src/renderer/i18n/locales/zh-Hant/translation.json
+++ b/src/renderer/i18n/locales/zh-Hant/translation.json
@@ -9,7 +9,10 @@
   "{{count}} file(s) not supported: {{files}}. Supported formats: {{formats}}": "{{count}} 檔案不支援：{{files}}。支援的格式：{{formats}}",
   "{{count}} file(s) queued for server parsing": "{{count}} 個檔案已排入伺服器解析佇列",
   "{{count}} MCP servers imported": "{{count}} MCP 伺服器已匯入",
+  "A cozy coffee shop interior": "溫馨的咖啡店室內",
+  "A futuristic city with flying cars": "充滿未來感的城市與飛行車",
   "A provider with this ID already exists. Continuing will overwrite the existing configuration.": "此 ID 的提供方已存在。繼續將覆蓋現有設定。",
+  "A serene mountain landscape at sunset": "寧靜的日落山景",
   "About": "關於",
   "About Chatbox": "版本資訊",
   "about-introduction": "一個簡約強大的 AI 桌面客戶端，支援全球最先進的多款大型語言模型，讓前沿的人工智能技術成為易於使用的生產力工具。",
@@ -27,6 +30,7 @@
   "Add MCP Server": "新增 MCP 伺服器",
   "Add or Import": "新增或匯入",
   "Add provider": "添加模型提供者",
+  "Add Reference Image": "新增參考圖片",
   "Add Server": "新增伺服器",
   "Add your first MCP server": "新增您的第一個MCP伺服器",
   "advanced": "其他",
@@ -37,12 +41,14 @@
   "AI Model Provider": "AI 模型提供者",
   "ai provider no implemented paint tips": "當前 AI 模型提供方（{{aiProvider}}）暫時不支持繪圖功能，目前僅 Chatbox AI、OpenAI 與 Azure OpenAI 支持該功能，如有需要請<0>開啟設置切換</0> AI 模型提供方",
   "AI Settings": "AI 設定",
+  "AI-generated images may not be accurate. Review output carefully.": "AI 生成的圖像可能不準確。請仔細檢查輸出內容。",
   "AIHubMix integration in Chatbox offers 10% discount": "在Chatbox中接入AIHubMix可享受10%優惠",
   "All": "全部",
   "All data is stored locally, ensuring privacy and rapid access": "所有數據都存儲在本地，確保隱私和快速訪問",
   "All major AI models in one subscription": "一個訂閱高速訪問所有主流 AI 模型",
   "All threads": "所有話題",
   "already existed": "已存在",
+  "An abstract painting with vibrant colors": "色彩鮮豔的抽象畫",
   "An easy-to-use AI client app": "一個簡單易用的 AI 客戶端應用程式",
   "An error occurred while processing your request. Please try again later. If this error continues, please send an email to hi@chatboxai.com for support.": "處理您的請求時發生錯誤。請稍後重試。如果此錯誤持續發生，請發送電子郵件至 hi@chatboxai.com 以獲得支持。",
   "An error occurred while sending the message.": "傳送訊息時發生錯誤。",
@@ -64,6 +70,7 @@
   "Are you sure you want to delete the knowledge base": "您確定要刪除知識庫嗎",
   "Are you sure you want to delete this server?": "您確定要刪除這個伺服器嗎？",
   "Arguments": "參數",
+  "Aspect Ratio": "長寬比",
   "assistant": "助理",
   "Attach Image": "附加圖片",
   "Attach Link": "添加鏈接",
@@ -184,11 +191,14 @@
   "Create": "建立",
   "Create a New Conversation": "創建新的聊天對話",
   "Create a New Image-Creator Conversation": "創建新的圖片製造機對話",
+  "Create amazing images": "創作精彩圖片",
   "Create File": "建立檔案",
   "Create First Knowledge Base": "建立第一個知識庫",
+  "Create Image": "生成圖片",
   "Create Knowledge Base": "建立知識庫",
   "Create New Copilot": "創建新的AI搭檔",
   "Create your first knowledge base to start adding documents and enhance your AI conversations with contextual information.": "建立您的第一個知識庫，以開始新增文件並透過上下文資訊增強您的 AI 對話。",
+  "Creating your masterpiece...": "正在創作您的傑作...",
   "creative": "想像發散",
   "Current conversation configured with specific model settings": "當前的對話配置了特定模型設置",
   "Current input": "目前輸入",
@@ -219,7 +229,11 @@
   "Delete Current Session": "刪除當前會話",
   "Delete File": "刪除檔案",
   "Delete Knowledge Base": "刪除知識庫",
+  "Delete this record?": "刪除此記錄？",
   "Deploy HTML content to EdgeOne Pages and obtaining an accessible public URL.": "部署 HTML 內容到 EdgeOne Pages 並取得可存取的公開 URL。",
+  "Describe the image you want to create...": "描述您想要生成的圖片...",
+  "Describe the image you want to generate. Be as detailed as possible for best results.": "描述您想生成的圖像。請儘可能詳細，以獲得最佳效果。",
+  "Describe your vision, and watch as AI transforms your words into stunning visual art.": "描述您的構思，看著 AI 將您的文字轉化為令人驚嘆的視覺藝術。",
   "Description": "描述",
   "Details": "詳情",
   "Diagnostic Logs": "診斷日誌",
@@ -331,6 +345,7 @@
   "General Settings": "一般設定",
   "Generate More Images Below": "於下方生成更多圖片",
   "Generating summary...": "正在產生摘要...",
+  "Generation Failed": "生成失敗",
   "Get API Key": "獲取 API 密鑰",
   "Get API Token": "取得 API 權杖",
   "Get better connectivity and stability with the Chatbox desktop application. <a>Download now</a>.": "使用 Chatbox 桌面版獲得更好的連接性和穩定性。<a>立即下載</a>。",
@@ -344,7 +359,9 @@
   "Hate speech or harassment": "仇恨言論或騷擾",
   "Here you can add and manage various custom model providers. As long as the provider's API is compatible with the selected API mode, you can seamlessly connect and use it within Chatbox.": "在這裡，您可以添加和管理各種自定義模型提供方。只要提供方的 API 與所選的 API 模式兼容，您就可以在 Chatbox 中無縫連接和使用它。",
   "Hide": "隱藏",
+  "Hide History": "隱藏紀錄",
   "High": "高",
+  "History": "歷史紀錄",
   "Home Page": "首頁",
   "Homepage": "首頁",
   "Hotkeys": "快捷鍵",
@@ -357,6 +374,7 @@
   "Image Creator Intro": "Hi！我是 Chatbox Image Creator，圖片製造機。我可以根據你的描述生成精美圖片，只要你能想像得到，我就能創造出來——迷人的風景、生動的角色、App 圖示、或者抽象的構思……\n\n(๑•́ ₃ •̀๑) 呃…我是一個有點自閉的機器人，所以**請直接告訴我你想要圖片的文字描述**，我會集中我所有的像素去實現你的想像。\n\n現在請發揮你的想像力吧！",
   "Image Quota": "圖片配額",
   "Image Style": "圖片風格",
+  "Imagine Something New": "想像新事物",
   "Import and Restore": "匯入與恢復",
   "Import Error": "匯入錯誤",
   "Import failed, unsupported data format": "匯入失敗，不支持的資料格式",
@@ -380,6 +398,7 @@
   "Knowledge Base": "知識庫",
   "Knowledge Base Debug": "知識庫除錯",
   "Knowledge Base functionality is not available on Windows ARM64 due to library compatibility issues. This feature is supported on Windows x64, macOS, and Linux.": "知識庫功能由於函式庫相容性問題，在 Windows ARM64 上不可用。此功能支援 Windows x64、macOS 和 Linux。",
+  "Landscape": "橫向",
   "Language": "語言",
   "Large file detected. Chunks will be loaded in batches of {{count}} to optimize performance.": "偵測到大檔案。將以每次 {{count}} 個區塊分批載入，以優化效能。",
   "Last Session": "上次會話",
@@ -395,6 +414,7 @@
   "Light Mode": "淺色模式",
   "Link Content": "連結內容",
   "List Files": "列出檔案",
+  "Load More": "載入更多",
   "Load More Chunks": "載入更多區塊",
   "Loading chunks...": "載入區塊中...",
   "Loading files...": "正在載入檔案...",
@@ -469,6 +489,7 @@
   "network proxy error tips": "因为你設置了代理位址{{proxy}}，請檢查代理伺服器是否正常運作，或者考慮在設定中刪除代理位址。",
   "New": "新建",
   "New Chat": "新對話",
+  "New Creation": "新創作",
   "New Images": "新圖片",
   "New knowledge base name": "新知識庫名稱",
   "New Thread": "新話題",
@@ -482,6 +503,7 @@
   "No expiration": "無期限",
   "No favorite models": "沒有最愛模型",
   "No files were dropped": "沒有檔案被拖放。",
+  "No history yet": "暫無歷史紀錄",
   "No Knowledge Base Yet": "還沒有知識庫",
   "No licenses found. Please purchase a license to continue.": "未找到授權。請購買授權以繼續。",
   "No Limit": "無限制",
@@ -537,6 +559,7 @@
   "Please select a model": "請選擇模型",
   "Please test before saving": "請先測試再儲存",
   "Please wait about 20 seconds": "請等待約 20 秒",
+  "Portrait": "直向",
   "pre-sale discount": "預售折扣",
   "premium": "高級版",
   "Premium Activation": "高級版啟用",
@@ -574,6 +597,8 @@
   "Recovering...": "恢復中...",
   "Recovery failed": "恢復失敗",
   "RedNote": "小紅書",
+  "Reference": "參考",
+  "Reference Images": "參考圖片",
   "Refresh": "刷新",
   "regenerate": "重新產生",
   "Regulate the volume of historical messages sent to the AI, striking a harmonious balance between depth of comprehension and the efficiency of responses.": "調節發送給AI的歷史訊息的數量，在理解深度和回應效率之間找到和諧的平衡。",
@@ -651,6 +676,7 @@
   "Show all ({{x}})": "顯示全部 ({{x}})",
   "Show Copilots in New Session": "在新對話中顯示 Copilots",
   "show first token latency": "顯示首字耗時",
+  "Show History": "顯示歷史",
   "Show in Thread List": "在話題列表中顯示",
   "show message timestamp": "顯示消息的時間戳",
   "show message token count": "顯示消息的 token 數量",
@@ -669,6 +695,8 @@
   "Special thanks to the following sponsors:": "特別感謝以下贊助商：",
   "Specific model settings": "具體模型設置",
   "Spell Check": "拼字檢查",
+  "Square": "正方形",
+  "Standard": "標準",
   "star": "星標",
   "Start a New Thread": "新話題",
   "Start Setup": "開始設置",
@@ -771,8 +799,10 @@
   "Upgrade": "升級",
   "Upload failed: {{error}}": "上傳失敗：{{error}}",
   "Upload Image": "上傳圖片",
+  "Upload Reference Image": "上傳參考圖片",
   "Upload your first document to get started": "上傳您的首份文件即可開始",
   "Upon import, changes will take effect immediately and existing data will be overwritten": "匯入後將直接生效，原有資料將會被覆蓋",
+  "Use as Reference": "作為參考",
   "Use My Own API Key / Local Model": "使用自己的 API Key 或本地模型",
   "Use proxy to resolve CORS and other network issues": "使用代理解決 CORS 和其他網路問題",
   "Use server parsing": "使用伺服器解析",
@@ -785,6 +815,7 @@
   "Uses built-in document parsing feature, supports common file types. Free usage, no compute points will be consumed.": "使用內建文件解析功能，支援常見檔案類型。免費使用，不會消耗計算點數。",
   "version": "版本",
   "Video files are not supported": "不支援影片檔案",
+  "View": "查看",
   "View All Copilots": "查看所有搭檔",
   "View Details": "查看詳情",
   "View historical threads": "查看歷史話題",
