--- a/src/renderer/i18n/locales/es/translation.json
+++ b/src/renderer/i18n/locales/es/translation.json
@@ -9,7 +9,10 @@
   "{{count}} file(s) not supported: {{files}}. Supported formats: {{formats}}": "{{count}} archivo(s) no compatible(s): {{files}}. Formatos compatibles: {{formats}}",
   "{{count}} file(s) queued for server parsing": "{{count}} archivo(s) en cola para el análisis del servidor",
   "{{count}} MCP servers imported": "{{count}} servidores MCP importados",
+  "A cozy coffee shop interior": "Interior de una cafetería acogedora",
+  "A futuristic city with flying cars": "Una ciudad futurista con coches voladores",
   "A provider with this ID already exists. Continuing will overwrite the existing configuration.": "Ya existe un proveedor con esta ID. Si continúa, se sobrescribirá la configuración existente.",
+  "A serene mountain landscape at sunset": "Un sereno paisaje de montaña al atardecer",
   "About": "Acerca de",
   "About Chatbox": "Acerca de Chatbox",
   "about-introduction": "Un cliente de IA para escritorio fácil de usar que admite múltiples modelos de IA avanzados, transformando la tecnología de inteligencia artificial de vanguardia en una herramienta de productividad fácil de usar.",
@@ -27,6 +30,7 @@
   "Add MCP Server": "Añadir Servidor MCP",
   "Add or Import": "Agregar o Importar",
   "Add provider": "Agregar proveedor",
+  "Add Reference Image": "Añadir imagen de referencia",
   "Add Server": "Añadir servidor",
   "Add your first MCP server": "Añadir tu primer servidor MCP",
   "advanced": "Avanzado",
@@ -37,12 +41,14 @@
   "AI Model Provider": "Proveedor del modelo de IA",
   "ai provider no implemented paint tips": "El proveedor de IA actual ({{aiProvider}}) no admite capacidades de pintura en este momento. Actualmente, solo Chatbox AI, OpenAI y Azure OpenAI ofrecen esta función. Si es necesario, por favor <0>vaya a la configuración</0> y cambie el proveedor del modelo de IA.",
   "AI Settings": "Ajustes de IA",
+  "AI-generated images may not be accurate. Review output carefully.": "Las imágenes generadas por AI pueden no ser precisas. Revise el resultado detenidamente.",
   "AIHubMix integration in Chatbox offers 10% discount": "Integración de AIHubMix en Chatbox ofrece un 10% de descuento",
   "All": "Todos",
   "All data is stored locally, ensuring privacy and rapid access": "Todos los datos se almacenan localmente, garantizando privacidad y acceso rápido",
   "All major AI models in one subscription": "Todos los principales modelos de IA en una suscripción",
   "All threads": "Todos los hilos",
   "already existed": "ya existía",
+  "An abstract painting with vibrant colors": "Una pintura abstracta con colores vibrantes.",
   "An easy-to-use AI client app": "Una aplicación cliente de IA fácil de usar",
   "An error occurred while processing your request. Please try again later. If this error continues, please send an email to hi@chatboxai.com for support.": "Se produjo un error al procesar su solicitud. Por favor, inténtelo de nuevo más tarde. Si este error persiste, por favor envíe un correo electrónico a hi@chatboxai.com para obtener ayuda.",
   "An error occurred while sending the message.": "Ocurrió un error al enviar el mensaje.",
@@ -64,6 +70,7 @@
   "Are you sure you want to delete the knowledge base": "¿Estás seguro de que quieres eliminar la base de conocimiento?",
   "Are you sure you want to delete this server?": "¿Está seguro de que quiere eliminar este servidor?",
   "Arguments": "Argumentos",
+  "Aspect Ratio": "Relación de aspecto",
   "assistant": "Asistente",
   "Attach Image": "Adjuntar imagen",
   "Attach Link": "Adjuntar enlace",
@@ -184,11 +191,14 @@
   "Create": "Crear",
   "Create a New Conversation": "Crear una nueva conversación",
   "Create a New Image-Creator Conversation": "Crear una nueva conversación de Creador de Imágenes",
+  "Create amazing images": "Crea imágenes increíbles",
   "Create File": "Crear Archivo",
   "Create First Knowledge Base": "Crear Primera Base de Conocimiento",
+  "Create Image": "Crear imagen",
   "Create Knowledge Base": "Crear Base de Conocimiento",
   "Create New Copilot": "Crear nuevo copiloto",
   "Create your first knowledge base to start adding documents and enhance your AI conversations with contextual information.": "Crea tu primera base de conocimiento para empezar a añadir documentos y mejorar tus conversaciones de AI con información contextual.",
+  "Creating your masterpiece...": "Creando tu obra maestra...",
   "creative": "Creativo",
   "Current conversation configured with specific model settings": "Conversación actual configurada con ajustes de modelo específicos",
   "Current input": "Entrada actual",
@@ -219,7 +229,11 @@
   "Delete Current Session": "Eliminar la sesión actual",
   "Delete File": "Eliminar Archivo",
   "Delete Knowledge Base": "Eliminar Base de conocimiento",
+  "Delete this record?": "¿Eliminar este registro?",
   "Deploy HTML content to EdgeOne Pages and obtaining an accessible public URL.": "Desplegar contenido HTML en EdgeOne Pages y obtener una URL pública accesible.",
+  "Describe the image you want to create...": "Describe la imagen que quieres crear...",
+  "Describe the image you want to generate. Be as detailed as possible for best results.": "Describe la imagen que quieres generar. Sé lo más detallado posible para obtener los mejores resultados.",
+  "Describe your vision, and watch as AI transforms your words into stunning visual art.": "Describe tu visión y observa cómo la AI transforma tus palabras en arte visual impresionante.",
   "Description": "Descripción",
   "Details": "Detalles",
   "Diagnostic Logs": "THOUGHTS: The user wants to translate \"Diagnostic Logs\" to Spanish. This is a straightforward translation. The most common and accurate translation is \"Registros de diagnóstico\".Registros de diagnóstico",
@@ -331,6 +345,7 @@
   "General Settings": "Configuraciones generales",
   "Generate More Images Below": "Generar más imágenes abajo",
   "Generating summary...": "Generando resumen...",
+  "Generation Failed": "Generación fallida",
   "Get API Key": "Obtener clave API",
   "Get API Token": "Obtener API Token",
   "Get better connectivity and stability with the Chatbox desktop application. <a>Download now</a>.": "Obtenez une meilleure connectivité et une stabilité avec l'application Chatbox pour bureau. <a>Télécharger maintenant</a>.",
@@ -344,7 +359,9 @@
   "Hate speech or harassment": "Discurso de odio o acoso",
   "Here you can add and manage various custom model providers. As long as the provider's API is compatible with the selected API mode, you can seamlessly connect and use it within Chatbox.": "Aquí puede agregar y gestionar varios proveedores de modelos personalizados. Siempre que la API del proveedor sea compatible con el modo de API seleccionado, podrá conectarse y utilizarla sin problemas dentro de Chatbox.",
   "Hide": "Ocultar",
+  "Hide History": "Ocultar historial",
   "High": "Alto",
+  "History": "Historial",
   "Home Page": "Página principal",
   "Homepage": "Página de inicio",
   "Hotkeys": "Accesos directos",
@@ -357,6 +374,7 @@
   "Image Creator Intro": "¡Hola! Soy el Creador de Imágenes de Chatbox, tu compañero artístico de IA dedicado a convertir tus palabras en impresionantes imágenes. Si puedes imaginarlo, yo puedo crearlo: desde paisajes encantadores, personajes dinámicos, iconos de aplicaciones hasta lo abstracto y más allá.\n\nSoy un robot silencioso, **simplemente dime la descripción de la imagen que tienes en mente**, y concentraré todos mis píxeles en dar vida a tu visión.\n\n¡Hagamos arte!",
   "Image Quota": "Cuota de imagen",
   "Image Style": "Estilo de imagen",
+  "Imagine Something New": "Imagina algo nuevo",
   "Import and Restore": "Importar y restaurar",
   "Import Error": "Error de importación",
   "Import failed, unsupported data format": "Importación fallida, formato de datos no compatible",
@@ -380,6 +398,7 @@
   "Knowledge Base": "Base de conocimiento",
   "Knowledge Base Debug": "Depuración de la Base de Conocimiento",
   "Knowledge Base functionality is not available on Windows ARM64 due to library compatibility issues. This feature is supported on Windows x64, macOS, and Linux.": "La funcionalidad de la Base de Conocimiento no está disponible en Windows ARM64 debido a problemas de compatibilidad de la biblioteca. Esta característica es compatible con Windows x64, macOS y Linux.",
+  "Landscape": "Paisaje",
   "Language": "Idioma",
   "Large file detected. Chunks will be loaded in batches of {{count}} to optimize performance.": "Archivo grande detectado. Los fragmentos se cargarán en lotes de {{count}} para optimizar el rendimiento.",
   "Last Session": "Última sesión",
@@ -395,6 +414,7 @@
   "Light Mode": "Modo claro",
   "Link Content": "Contenido del enlace",
   "List Files": "Listar Archivos",
+  "Load More": "Cargar más",
   "Load More Chunks": "Cargar más fragmentos",
   "Loading chunks...": "Cargando fragmentos...",
   "Loading files...": "Cargando archivos...",
@@ -469,6 +489,7 @@
   "network proxy error tips": "Debido a la dirección de proxy que has configurado como {{proxy}}, por favor verifica si el servidor proxy está funcionando correctamente, o considera eliminar la dirección de proxy de los ajustes.",
   "New": "Nuevo",
   "New Chat": "Nuevo chat",
+  "New Creation": "Nueva creación",
   "New Images": "Nuevas imágenes",
   "New knowledge base name": "Nuevo nombre de base de conocimiento",
   "New Thread": "Nuevo hilo",
@@ -482,6 +503,7 @@
   "No expiration": "Sin vencimiento",
   "No favorite models": "No hay modelos favoritos",
   "No files were dropped": "No se soltaron archivos",
+  "No history yet": "Aún no hay historial",
   "No Knowledge Base Yet": "No hay base de conocimiento aún",
   "No licenses found. Please purchase a license to continue.": "No se encontraron licencias. Por favor, adquiere una licencia para continuar.",
   "No Limit": "Sin límite",
@@ -532,6 +554,7 @@
   "Please select a model": "Por favor, seleccione un modelo",
   "Please test before saving": "Por favor, pruebe antes de guardar",
   "Please wait about 20 seconds": "Por favor, espere unos 20 segundos",
+  "Portrait": "Retrato",
   "pre-sale discount": "descuento de preventa",
   "premium": "premium",
   "Premium Activation": "Activación Premium",
@@ -569,6 +592,8 @@
   "Recovering...": "Recuperando...",
   "Recovery failed": "Recuperación fallida",
   "RedNote": "Nota Roja",
+  "Reference": "Referencia",
+  "Reference Images": "Imágenes de referencia",
   "Refresh": "Actualizar",
   "Regulate the volume of historical messages sent to the AI, striking a harmonious balance between depth of comprehension and the efficiency of responses.": "Regula el volumen de mensajes históricos enviados a la IA, buscando un equilibrio armonioso entre la profundidad de comprensión y la eficiencia de las respuestas.",
   "Remaining/Total Quota": "Cuota restante/total",
@@ -645,6 +670,7 @@
   "Show all ({{x}})": "Mostrar todo ({{x}})",
   "Show Copilots in New Session": "Mostrar Copilots en Nueva Sesión",
   "show first token latency": "Mostrar latencia del primer token",
+  "Show History": "Mostrar historial",
   "Show in Thread List": "Mostrar en la lista de hilos",
   "show message timestamp": "Mostrar marca de tiempo del mensaje",
   "show message token count": "Mostrar recuento de tokens del mensaje",
@@ -664,6 +690,8 @@
   "Specific model settings": "Ajustes específicos del modelo",
   "Specific model settings configured for this conversation": "Ajustes específicos del modelo configurados para esta conversación",
   "Spell Check": "Corrección ortográfica",
+  "Square": "Cuadrado",
+  "Standard": "Estándar",
   "star": "Destacar",
   "Start a New Thread": "Iniciar un nuevo hilo",
   "Start Setup": "Iniciar configuración",
@@ -765,8 +793,10 @@
   "Upgrade": "Actualizar",
   "Upload failed: {{error}}": "Error al cargar: {{error}}",
   "Upload Image": "Subir imagen",
+  "Upload Reference Image": "Subir imagen de referencia",
   "Upload your first document to get started": "Carga tu primer documento para empezar",
   "Upon import, changes will take effect immediately and existing data will be overwritten": "Al importar, los cambios se aplicarán inmediatamente y los datos existentes se sobrescribirán",
+  "Use as Reference": "Usar como referencia",
   "Use My Own API Key / Local Model": "Usar mi propia API Key / Modelo local",
   "Use proxy to resolve CORS and other network issues": "Usar proxy para resolver problemas de CORS y otros problemas de red",
   "Use server parsing": "Usar análisis en el servidor",
@@ -779,6 +809,7 @@
   "Uses built-in document parsing feature, supports common file types. Free usage, no compute points will be consumed.": "Utiliza la función de análisis de documentos incorporada, admite tipos de archivo comunes. Uso gratuito, no se consumirán puntos de cómputo.",
   "version": "Versión",
   "Video files are not supported": "Los archivos de vídeo no son compatibles",
+  "View": "Ver",
   "View All Copilots": "Ver todos los copilotos",
   "View Details": "Ver detalles",
   "View historical threads": "Ver hilos históricos",
