--- a/src/renderer/i18n/locales/fr/translation.json
+++ b/src/renderer/i18n/locales/fr/translation.json
@@ -9,7 +9,10 @@
   "{{count}} file(s) not supported: {{files}}. Supported formats: {{formats}}": "{{count}} fichier(s) non pris en charge : {{files}}. Formats pris en charge : {{formats}}",
   "{{count}} file(s) queued for server parsing": "{{count}} fichier(s) en attente d'analyse par le serveur",
   "{{count}} MCP servers imported": "{{count}} serveurs MCP importés",
+  "A cozy coffee shop interior": "Un intérieur de café chaleureux",
+  "A futuristic city with flying cars": "Une ville futuriste avec des voitures volantes",
   "A provider with this ID already exists. Continuing will overwrite the existing configuration.": "Un fournisseur avec cet ID existe déjà. Continuer écrasera la configuration existante.",
+  "A serene mountain landscape at sunset": "Un paysage de montagne serein au coucher du soleil",
   "About": "À propos",
   "About Chatbox": "À propos de Chatbox",
   "about-introduction": "Un client de bureau IA convivial prenant en charge plusieurs modèles IA avancés, transformant une technologie d'intelligence artificielle de pointe en un outil de productivité facile à utiliser.",
@@ -27,6 +30,7 @@
   "Add MCP Server": "Ajouter un serveur MCP",
   "Add or Import": "Ajouter ou Importer",
   "Add provider": "Ajouter un fournisseur",
+  "Add Reference Image": "Ajouter une image de référence",
   "Add Server": "Ajouter Serveur",
   "Add your first MCP server": "Ajouter votre premier serveur MCP",
   "advanced": "Avancé",
@@ -37,12 +41,14 @@
   "AI Model Provider": "Fournisseur de modèle IA",
   "ai provider no implemented paint tips": "Le fournisseur actuel du modèle AI ({{aiProvider}}) ne prend pas en charge la fonction de peinture pour le moment. Actuellement, seuls Chatbox AI, OpenAI et Azure OpenAI proposent cette fonctionnalité. Si nécessaire, veuillez <0>aller dans les paramètres</0> pour changer de fournisseur de modèle AI.",
   "AI Settings": "Paramètres de l'IA",
+  "AI-generated images may not be accurate. Review output carefully.": "Les images générées par l’AI peuvent ne pas être exactes. Examinez attentivement le résultat.",
   "AIHubMix integration in Chatbox offers 10% discount": "L'intégration d'AIHubMix dans Chatbox offre une réduction de 10 %.",
   "All": "Tous",
   "All data is stored locally, ensuring privacy and rapid access": "Toutes les données sont stockées localement, garantissant la confidentialité et un accès rapide",
   "All major AI models in one subscription": "Tous les principaux modèles d'IA dans un abonnement",
   "All threads": "Tous les sujets",
   "already existed": "existe déjà",
+  "An abstract painting with vibrant colors": "Une peinture abstraite aux couleurs vives",
   "An easy-to-use AI client app": "Une application client IA facile à utiliser",
   "An error occurred while processing your request. Please try again later. If this error continues, please send an email to hi@chatboxai.com for support.": "Une erreur s'est produite lors du traitement de votre requête. Veuillez réessayer plus tard. Si cette erreur persiste, veuillez envoyer un email à hi@chatboxai.com pour obtenir de l'aide.",
   "An error occurred while sending the message.": "Une erreur est survenue lors de l'envoi du message.",
@@ -64,6 +70,7 @@
   "Are you sure you want to delete the knowledge base": "Voulez-vous vraiment supprimer la base de connaissances",
   "Are you sure you want to delete this server?": "Voulez-vous vraiment supprimer ce serveur ?",
   "Arguments": "Arguments",
+  "Aspect Ratio": "Rapport d'aspect",
   "assistant": "Assistant",
   "Attach Image": "Joindre une Image",
   "Attach Link": "Joindre un lien",
@@ -184,11 +191,14 @@
   "Create": "Créer",
   "Create a New Conversation": "Créer une nouvelle conversation",
   "Create a New Image-Creator Conversation": "Créer une nouvelle conversation avec Image Creator",
+  "Create amazing images": "Créez des images incroyables",
   "Create File": "Créer un fichier",
   "Create First Knowledge Base": "Créer une première base de connaissances",
+  "Create Image": "Créer une image",
   "Create Knowledge Base": "Créer une base de connaissances",
   "Create New Copilot": "Créer un nouveau copilote",
   "Create your first knowledge base to start adding documents and enhance your AI conversations with contextual information.": "Créez votre première base de connaissances pour commencer à ajouter des documents et améliorer vos conversations {{AI}} avec des informations contextuelles.",
+  "Creating your masterpiece...": "Création de votre chef-d'œuvre...",
   "creative": "Créatif",
   "Current conversation configured with specific model settings": "Conversation actuelle configurée avec des paramètres de modèle spécifiques",
   "Current input": "Saisie actuelle",
@@ -219,7 +229,11 @@
   "Delete Current Session": "Supprimer la session actuelle",
   "Delete File": "Supprimer le fichier",
   "Delete Knowledge Base": "Supprimer la base de connaissances",
+  "Delete this record?": "Supprimer cet enregistrement ?",
   "Deploy HTML content to EdgeOne Pages and obtaining an accessible public URL.": "Déployer du contenu HTML vers EdgeOne Pages et obtenir une URL publique accessible.",
+  "Describe the image you want to create...": "Décrivez l'image que vous souhaitez créer...",
+  "Describe the image you want to generate. Be as detailed as possible for best results.": "Décrivez l'image que vous souhaitez générer. Soyez aussi précis que possible pour obtenir les meilleurs résultats.",
+  "Describe your vision, and watch as AI transforms your words into stunning visual art.": "Décrivez votre vision et regardez l'AI transformer vos mots en art visuel époustouflant.",
   "Description": "Description",
   "Details": "Détails",
   "Diagnostic Logs": "Carnets de diagnostic",
@@ -331,6 +345,7 @@
   "General Settings": "Paramètres généraux",
   "Generate More Images Below": "Générez plus d'images ci-dessous",
   "Generating summary...": "Génération du résumé...",
+  "Generation Failed": "Échec de la génération",
   "Get API Key": "Obtenir une clé API",
   "Get API Token": "Obtenir un jeton API",
   "Get better connectivity and stability with the Chatbox desktop application. <a>Download now</a>.": "Obtenez une meilleure connectivité et une stabilité avec l'application Chatbox pour bureau. <a>Télécharger maintenant</a>.",
@@ -344,7 +359,9 @@
   "Hate speech or harassment": "Discours ou harcèlement haineux",
   "Here you can add and manage various custom model providers. As long as the provider's API is compatible with the selected API mode, you can seamlessly connect and use it within Chatbox.": "Ici, vous pouvez ajouter et gérer divers fournisseurs de modèles personnalisés. Tant que l'API du fournisseur est compatible avec le mode API sélectionné, vous pouvez vous connecter et l'utiliser de manière transparente dans Chatbox.",
   "Hide": "Masquer",
+  "Hide History": "Masquer l'historique",
   "High": "Élevé",
+  "History": "Historique",
   "Home Page": "Page d'accueil",
   "Homepage": "Page d'accueil",
   "Hotkeys": "Raccourcis clavier",
@@ -357,6 +374,7 @@
   "Image Creator Intro": "Bonjour ! Je suis Chatbox Image Creator, votre compagnon artistique IA dédié à transformer vos paroles en visuels frappants. Si vous pouvez le rêver, je peux le créer — des paysages enchanteurs, des personnages dynamiques, des icônes d'application jusqu'à l'abstrait et au-delà.\n\nJe suis un robot silencieux, il suffit **de me dire simplement la description de l'image que vous avez en tête**, et je concentrerai tous mes pixels pour concrétiser votre vision.\n\nFaisons de l'art !",
   "Image Quota": "Quota d'images",
   "Image Style": "Style d'Image",
+  "Imagine Something New": "Imaginez quelque chose de nouveau",
   "Import and Restore": "Importer et restaurer",
   "Import Error": "Erreur d'importation",
   "Import failed, unsupported data format": "Échec de l'importation, format de données non supporté",
@@ -380,6 +398,7 @@
   "Knowledge Base": "Base de connaissances",
   "Knowledge Base Debug": "Débogage de la base de connaissances",
   "Knowledge Base functionality is not available on Windows ARM64 due to library compatibility issues. This feature is supported on Windows x64, macOS, and Linux.": "La fonctionnalité de base de connaissances n'est pas disponible sur Windows ARM64 en raison de problèmes de compatibilité de bibliothèque. Cette fonctionnalité est prise en charge sur Windows x64, macOS et Linux.",
+  "Landscape": "Paysage",
   "Language": "Langue",
   "Large file detected. Chunks will be loaded in batches of {{count}} to optimize performance.": "Fichier volumineux détecté. Les blocs seront chargés par lots de {{count}} pour optimiser les performances.",
   "Last Session": "Dernière session",
@@ -395,6 +414,7 @@
   "Light Mode": "Mode Clair",
   "Link Content": "Contenu du lien",
   "List Files": "Lister les fichiers",
+  "Load More": "Charger plus",
   "Load More Chunks": "Charger plus de blocs",
   "Loading chunks...": "Chargement des fragments...",
   "Loading files...": "Chargement des fichiers...",
@@ -469,6 +489,7 @@
   "network proxy error tips": "Étant donné que vous avez configuré une adresse de proxy {{proxy}}, veuillez vérifier si le serveur proxy fonctionne correctement ou envisagez de supprimer l'adresse du proxy dans les paramètres.",
   "New": "Nouveau",
   "New Chat": "Nouvelle discussion",
+  "New Creation": "Nouvelle création",
   "New Images": "Nouvelles Images",
   "New knowledge base name": "Nouveau nom de base de connaissances",
   "New Thread": "Nouveau Sujet",
@@ -482,6 +503,7 @@
   "No expiration": "Sans expiration",
   "No favorite models": "Aucun modèle favori",
   "No files were dropped": "Aucun fichier n'a été déposé",
+  "No history yet": "Pas encore d'historique",
   "No Knowledge Base Yet": "Aucune base de connaissances pour l'instant",
   "No licenses found. Please purchase a license to continue.": "Aucune licence trouvée. Veuillez acheter une licence pour continuer.",
   "No Limit": "Pas de limite",
@@ -532,6 +554,7 @@
   "Please select a model": "Veuillez sélectionner un modèle",
   "Please test before saving": "Veuillez tester avant d'enregistrer.",
   "Please wait about 20 seconds": "Veuillez patienter environ 20 secondes",
+  "Portrait": "Portrait",
   "pre-sale discount": "remise avant-vente",
   "premium": "premium",
   "Premium Activation": "Activation Premium",
@@ -569,6 +592,8 @@
   "Recovering...": "Récupération...",
   "Recovery failed": "Récupération échouée",
   "RedNote": "RedNote",
+  "Reference": "Référence",
+  "Reference Images": "Images de référence",
   "Refresh": "Actualiser",
   "regenerate": "Régénérer",
   "Regulate the volume of historical messages sent to the AI, striking a harmonious balance between depth of comprehension and the efficiency of responses.": "Régulez le volume des messages historiques envoyés à l'IA, en trouvant un équilibre harmonieux entre la profondeur de compréhension et l'efficacité des réponses.",
@@ -646,6 +671,7 @@
   "Show all ({{x}})": "Afficher tout ({{x}})",
   "Show Copilots in New Session": "Afficher les Copilots dans une nouvelle session",
   "show first token latency": "Afficher la latence du premier token",
+  "Show History": "Afficher l'historique",
   "Show in Thread List": "Afficher dans la liste des sujets",
   "show message timestamp": "Afficher l'horodatage du message",
   "show message token count": "Afficher le nombre de jetons du message",
@@ -665,6 +691,8 @@
   "Specific model settings": "Paramètres de modèle spécifiques",
   "Specific model settings configured for this conversation": "Paramètres de modèle spécifiques configurés pour cette conversation",
   "Spell Check": "Vérification orthographique",
+  "Square": "Carré",
+  "Standard": "Standard",
   "star": "Étoile",
   "Start a New Thread": "Démarrer un Nouveau Sujet",
   "Start Setup": "Démarrer la configuration",
@@ -766,8 +794,10 @@
   "Upgrade": "Mettre à niveau",
   "Upload failed: {{error}}": "Échec de l'envoi : {{error}}",
   "Upload Image": "Télécharger une image",
+  "Upload Reference Image": "Charger une image de référence",
   "Upload your first document to get started": "Téléchargez votre premier document pour commencer",
   "Upon import, changes will take effect immediately and existing data will be overwritten": "A l'importation, les modifications prendront effet immédiatement et les données existantes seront remplacées",
+  "Use as Reference": "Utiliser comme référence",
   "Use My Own API Key / Local Model": "Utiliser ma propre clé API / Modèle local",
   "Use proxy to resolve CORS and other network issues": "Utiliser un proxy pour résoudre les problèmes de CORS et d'autres problèmes de réseau",
   "Use server parsing": "Utiliser l'analyse par le serveur",
@@ -780,6 +810,7 @@
   "Uses built-in document parsing feature, supports common file types. Free usage, no compute points will be consumed.": "Utilise la fonction d'analyse de documents intégrée, prend en charge les types de fichiers courants. Utilisation gratuite, aucun point de calcul ne sera consommé.",
   "version": "Version",
   "Video files are not supported": "Fichiers vidéo non pris en charge",
+  "View": "Voir",
   "View All Copilots": "Voir tous les copilotes",
   "View Details": "Voir les détails",
   "View historical threads": "Voir les sujets historiques",
