--- a/src/renderer/i18n/locales/ko/translation.json
+++ b/src/renderer/i18n/locales/ko/translation.json
@@ -9,7 +9,10 @@
   "{{count}} file(s) not supported: {{files}}. Supported formats: {{formats}}": "{{count}}개의 파일이 지원되지 않습니다: {{files}}. 지원되는 형식: {{formats}}",
   "{{count}} file(s) queued for server parsing": "{{count}}개 파일이 서버 구문 분석 대기 중입니다.",
   "{{count}} MCP servers imported": "{{count}} MCP 서버 가져옴",
+  "A cozy coffee shop interior": "아늑한 카페 인테리어",
+  "A futuristic city with flying cars": "날아다니는 자동차가 있는 미래 도시",
   "A provider with this ID already exists. Continuing will overwrite the existing configuration.": "이 ID를 가진 제공자가 이미 존재합니다. 계속하면 기존 구성이 덮어쓰여집니다.",
+  "A serene mountain landscape at sunset": "해 질 녘의 고요한 산 풍경",
   "About": "정보",
   "About Chatbox": "Chatbox 정보",
   "about-introduction": "다양한 고급 AI 모델을 지원하는 사용자 친화적인 AI 데스크톱 클라이언트로, 최첨단 인공지능 기술을 쉽게 사용할 수 있는 생산성 도구로 변환합니다.",
@@ -27,6 +30,7 @@
   "Add MCP Server": "MCP 서버 추가",
   "Add or Import": "추가 또는 가져오기",
   "Add provider": "제공자 추가",
+  "Add Reference Image": "참조 이미지 추가",
   "Add Server": "서버 추가",
   "Add your first MCP server": "첫 번째 MCP 서버를 추가하세요",
   "advanced": "고급",
@@ -37,12 +41,14 @@
   "AI Model Provider": "AI 모델 공급자",
   "ai provider no implemented paint tips": "현재 AI 모델 제공 업체({{aiProvider}})는 그림 기능을 지원하지 않습니다. 현재 그림 기능은 Chatbox AI, OpenAI, Azure OpenAI 만 지원합니다. 필요한 경우 <0>설정으로 이동하여</0>AI 모델 제공 업체를 변경하세요.",
   "AI Settings": "AI 설정",
+  "AI-generated images may not be accurate. Review output carefully.": "AI가 생성한 이미지는 정확하지 않을 수 있습니다. 출력된 결과물을 주의 깊게 검토해 주세요.",
   "AIHubMix integration in Chatbox offers 10% discount": "Chatbox에 AIHubMix 연동 시 10% 할인 혜택 제공",
   "All": "모두",
   "All data is stored locally, ensuring privacy and rapid access": "모든 데이터는 로컬에 저장되어 개인 정보 보호와 빠른 액세스를 보장합니다",
   "All major AI models in one subscription": "모든 주요 AI 모델을 하나의 구독으로 사용",
   "All threads": "모든 스레드",
   "already existed": "이미 존재함",
+  "An abstract painting with vibrant colors": "선명한 색상의 추상화",
   "An easy-to-use AI client app": "사용하기 쉬운 AI 클라이언트 앱",
   "An error occurred while processing your request. Please try again later. If this error continues, please send an email to hi@chatboxai.com for support.": "요청 처리 중 오류가 발생했습니다. 나중에 다시 시도하세요. 이 오류가 지속되면 hi@chatboxai.com로 이메일을 보내주세요.",
   "An error occurred while sending the message.": "메시지를 보내는 중 오류가 발생했습니다.",
@@ -64,6 +70,7 @@
   "Are you sure you want to delete the knowledge base": "지식 기반을 정말 삭제하시겠습니까?",
   "Are you sure you want to delete this server?": "정말로 이 서버를 삭제하시겠습니까?",
   "Arguments": "인수",
+  "Aspect Ratio": "화면 비율",
   "assistant": "어시스턴트",
   "Attach Image": "이미지 첨부",
   "Attach Link": "링크 첨부",
@@ -184,11 +191,14 @@
   "Create": "생성",
   "Create a New Conversation": "새 대화 만들기",
   "Create a New Image-Creator Conversation": "새 이미지 생성기 대화 만들기",
+  "Create amazing images": "놀라운 이미지 생성",
   "Create File": "파일 만들기",
   "Create First Knowledge Base": "첫 지식 기반 만들기",
+  "Create Image": "이미지 생성",
   "Create Knowledge Base": "지식 기반 만들기",
   "Create New Copilot": "새 동반자 만들기",
   "Create your first knowledge base to start adding documents and enhance your AI conversations with contextual information.": "문서를 추가하고 AI 대화를 상황별 정보로 향상시키려면 첫 번째 지식 기반을 만드세요.",
+  "Creating your masterpiece...": "걸작을 만드는 중...",
   "creative": "창의적인",
   "Current conversation configured with specific model settings": "현재 대화 특정 모델 설정으로 구성됨",
   "Current input": "현재 입력",
@@ -219,7 +229,11 @@
   "Delete Current Session": "현재 세션 삭제",
   "Delete File": "파일 삭제",
   "Delete Knowledge Base": "지식 기반 삭제",
+  "Delete this record?": "이 기록을 삭제하시겠습니까?",
   "Deploy HTML content to EdgeOne Pages and obtaining an accessible public URL.": "HTML 콘텐츠를 EdgeOne Pages에 배포하고 접근 가능한 공개 URL을 획득합니다.",
+  "Describe the image you want to create...": "생성하고 싶은 이미지를 설명해 주세요...",
+  "Describe the image you want to generate. Be as detailed as possible for best results.": "생성하고 싶은 이미지를 설명해 주세요. 최상의 결과를 위해 가능한 한 자세히 묘사해 주세요.",
+  "Describe your vision, and watch as AI transforms your words into stunning visual art.": "상상을 묘사해 보세요. AI가 당신의 단어를 놀라운 시각적 예술 작품으로 만들어 드립니다.",
   "Description": "설명",
   "Details": "세부 정보",
   "Diagnostic Logs": "진단 로그",
@@ -331,6 +345,7 @@
   "General Settings": "일반 설정",
   "Generate More Images Below": "아래에서 더 많은 이미지 생성",
   "Generating summary...": "요약 생성 중...",
+  "Generation Failed": "생성 실패",
   "Get API Key": "API 키 가져오기",
   "Get API Token": "API 토큰 가져오기",
   "Get better connectivity and stability with the Chatbox desktop application. <a>Download now</a>.": "Chatbox 데스크톱 앱을 사용하여 더 나은 연결과 안정성을 얻으세요. <a>지금 다운로드</a>.",
@@ -344,7 +359,9 @@
   "Hate speech or harassment": "증오 발언 또는 괴롭힘",
   "Here you can add and manage various custom model providers. As long as the provider's API is compatible with the selected API mode, you can seamlessly connect and use it within Chatbox.": "여기에서 다양한 사용자 정의 모델 공급자를 추가하고 관리할 수 있습니다. 공급자의 API가 선택한 API 모드와 호환되는 한 Chatbox 내에서 원활하게 연결하고 사용할 수 있습니다.",
   "Hide": "숨기기",
+  "Hide History": "히스토리 숨기기",
   "High": "높음",
+  "History": "기록",
   "Home Page": "홈 페이지",
   "Homepage": "홈페이지",
   "Hotkeys": "단축키",
@@ -357,6 +374,7 @@
   "Image Creator Intro": "안녕하세요! 저는 Chatbox Image Creator, 당신의 말을 환상적인 시각 이미지로 바꿔드리는 예술적 AI 동반자입니다. 상상할 수 있다면 저는 그것을 만들 수 있습니다—매혹적인 풍경, 역동적인 캐릭터, 앱 아이콘, 또는 추상적인 개념까지.\n\n저는 조용한 로봇이니, **그저 마음에 떠오르는 이미지에 대한 설명을 말해주세요**, 그러면 저는 모든 픽셀을 집중하여 당신의 비전을 현실로 만들겠습니다.\n\n자, 예술을 만들어 봅시다!",
   "Image Quota": "이미지 할당량",
   "Image Style": "이미지 스타일",
+  "Imagine Something New": "새로운 것을 상상해 보세요",
   "Import and Restore": "가져오기 및 복원",
   "Import Error": "가져오기 오류",
   "Import failed, unsupported data format": "가져오기 실패, 지원하지 않는 데이터 형식",
@@ -380,6 +398,7 @@
   "Knowledge Base": "지식 기반",
   "Knowledge Base Debug": "지식 기반 디버그",
   "Knowledge Base functionality is not available on Windows ARM64 due to library compatibility issues. This feature is supported on Windows x64, macOS, and Linux.": "라이브러리 호환성 문제로 인해 Windows ARM64에서는 지식 기반 기능이 제공되지 않습니다. 이 기능은 Windows x64, macOS, Linux에서 지원됩니다.",
+  "Landscape": "가로 방향",
   "Language": "언어",
   "Large file detected. Chunks will be loaded in batches of {{count}} to optimize performance.": "대용량 파일이 감지되었습니다. 성능 최적화를 위해 {{count}}개씩 청크가 로드됩니다.",
   "Last Session": "마지막 세션",
@@ -395,6 +414,7 @@
   "Light Mode": "라이트 모드",
   "Link Content": "링크 콘텐츠",
   "List Files": "파일 목록",
+  "Load More": "더 보기",
   "Load More Chunks": "청크 더 불러오기",
   "Loading chunks...": "청크 로딩 중...",
   "Loading files...": "파일 로드 중...",
@@ -469,6 +489,7 @@
   "network proxy error tips": "프록시 주소를 설정하여 {{proxy}}로 설정하셨기 때문에 프록시 서버가 정상적으로 작동하는지 확인하거나 설정에서 프록시 주소를 삭제하는 것을 고려해 주세요.",
   "New": "새로 만들기",
   "New Chat": "새로운 채팅",
+  "New Creation": "새로운 창작",
   "New Images": "새 이미지",
   "New knowledge base name": "새 지식 기반 이름",
   "New Thread": "새 스레드",
@@ -482,6 +503,7 @@
   "No expiration": "만료 없음",
   "No favorite models": "즐겨찾는 모델 없음",
   "No files were dropped": "드롭된 파일이 없습니다.",
+  "No history yet": "아직 기록이 없습니다",
   "No Knowledge Base Yet": "아직 지식 기반 없음",
   "No licenses found. Please purchase a license to continue.": "라이선스를 찾을 수 없습니다. 계속하려면 라이선스를 구매해 주세요.",
   "No Limit": "제한 없음",
@@ -532,6 +554,7 @@
   "Please select a model": "모델을 선택해주세요",
   "Please test before saving": "저장하기 전에 테스트해주세요",
   "Please wait about 20 seconds": "약 20초간 기다려 주세요",
+  "Portrait": "세로",
   "pre-sale discount": "사전 판매 할인",
   "premium": "프리미엄",
   "Premium Activation": "프리미엄 활성화",
@@ -569,6 +592,8 @@
   "Recovering...": "복구 중...",
   "Recovery failed": "복구 실패했습니다",
   "RedNote": "빨간 노트",
+  "Reference": "참조",
+  "Reference Images": "참조 이미지",
   "Refresh": "새로 고침",
   "regenerate": "재생성",
   "Regulate the volume of historical messages sent to the AI, striking a harmonious balance between depth of comprehension and the efficiency of responses.": "AI에 전송되는 역사적 메시지의 양을 조정하고, 이해의 깊이와 응답의 효율성 간의 조화로운 균형을 찾습니다.",
@@ -646,6 +671,7 @@
   "Show all ({{x}})": "모두 보기 ({{x}})",
   "Show Copilots in New Session": "새 대화에서 코파일럿 표시",
   "show first token latency": "첫 토큰 지연 표시",
+  "Show History": "기록 보기",
   "Show in Thread List": "스레드 목록에 표시",
   "show message timestamp": "메시지 타임스탬프 표시",
   "show message token count": "메시지 토큰 수 표시",
@@ -665,6 +691,8 @@
   "Specific model settings": "특정 모델 설정",
   "Specific model settings configured for this conversation": "이 대화에 구성된 특정 모델 설정",
   "Spell Check": "맞춤법 검사",
+  "Square": "정사각형",
+  "Standard": "표준",
   "star": "별 표시",
   "Start a New Thread": "새 스레드 시작",
   "Start Setup": "설정 시작",
@@ -766,8 +794,10 @@
   "Upgrade": "업그레이드",
   "Upload failed: {{error}}": "업로드 실패: {{error}}",
   "Upload Image": "이미지 업로드",
+  "Upload Reference Image": "참조 이미지 업로드",
   "Upload your first document to get started": "시작하려면 첫 번째 문서를 업로드하세요",
   "Upon import, changes will take effect immediately and existing data will be overwritten": "가져오기 후 변경사항이 즉시 적용되며 기존 데이터는 덮어쓰게 됩니다",
+  "Use as Reference": "참조로 사용",
   "Use My Own API Key / Local Model": "내 자체 API 키 / 로컬 모델 사용",
   "Use proxy to resolve CORS and other network issues": "프록시를 사용하여 CORS 및 기타 네트워크 문제 해결",
   "Use server parsing": "서버 파싱 사용",
@@ -780,6 +810,7 @@
   "Uses built-in document parsing feature, supports common file types. Free usage, no compute points will be consumed.": "내장 문서 구문 분석 기능을 사용하며, 일반적인 파일 형식을 지원합니다. 무료 사용이며, 컴퓨팅 포인트가 소모되지 않습니다.",
   "version": "버전",
   "Video files are not supported": "동영상 파일은 지원되지 않습니다",
+  "View": "보기",
   "View All Copilots": "모든 동반자 보기",
   "View Details": "자세히 보기",
   "View historical threads": "과거 스레드 보기",
