--- a/src/renderer/i18n/locales/nb-NO/translation.json
+++ b/src/renderer/i18n/locales/nb-NO/translation.json
@@ -9,7 +9,10 @@
   "{{count}} file(s) not supported: {{files}}. Supported formats: {{formats}}": "{{count}} fil(er) støttes ikke: {{files}}. Støttede formater: {{formats}}",
   "{{count}} file(s) queued for server parsing": "{{count}} fil(er) lagt i kø for serveranalyse",
   "{{count}} MCP servers imported": "{{count}} MCP servere importert",
+  "A cozy coffee shop interior": "Et koselig kaffebarinteriør",
+  "A futuristic city with flying cars": "En futuristisk by med flyvende biler",
   "A provider with this ID already exists. Continuing will overwrite the existing configuration.": "En tilbyder med denne ID-en finnes allerede. Fortsetter du, vil den eksisterende konfigurasjonen overskrives.",
+  "A serene mountain landscape at sunset": "Et fredelig fjellandskap ved solnedgang",
   "About": "Om",
   "About Chatbox": "Om Chatbox",
   "about-introduction": "En brukervennlig KI-applikasjon som støtter flere avanserte KI-modeller, og gjør banebrytende kunstig intelligens-teknologi om til et lettbrukt produktivitetsverktøy.",
@@ -27,6 +30,7 @@
   "Add MCP Server": "Legg til MCP Server",
   "Add or Import": "Legg til eller Importer",
   "Add provider": "Legg til tilbyder",
+  "Add Reference Image": "Legg til referansebilde",
   "Add Server": "Legg til server",
   "Add your first MCP server": "Legg til din første MCP-server",
   "advanced": "Avansert",
@@ -37,12 +41,14 @@
   "AI Model Provider": "KI-modelltilbyder",
   "ai provider no implemented paint tips": "Den nåværende AI-modelleverandøren ({{aiProvider}}) støtter ikke bildeskapingsfunksjoner for øyeblikket. For tiden er det bare Chatbox AI, OpenAI og Azure OpenAI som tilbyr denne funksjonen. Om nødvendig, vennligst <0>gå til innstillinger</0> og bytt AI-modelleverandør.",
   "AI Settings": "KI-innstillinger",
+  "AI-generated images may not be accurate. Review output carefully.": "AI-genererte bilder er kanskje ikke nøyaktige. Kontroller resultatet nøye.",
   "AIHubMix integration in Chatbox offers 10% discount": "AIHubMix-integrasjon i Chatbox gir 10 % rabatt",
   "All": "Alle",
   "All data is stored locally, ensuring privacy and rapid access": "Alle data lagres lokalt, noe som sikrer personvern og rask tilgang",
   "All major AI models in one subscription": "Alle store AI-modeller i en abonnement",
   "All threads": "Alle tråder",
   "already existed": "allerede eksisterende",
+  "An abstract painting with vibrant colors": "Et abstrakt maleri med livlige farger",
   "An easy-to-use AI client app": "En brukervennlig AI-klientapp",
   "An error occurred while processing your request. Please try again later. If this error continues, please send an email to hi@chatboxai.com for support.": "Det oppstod en feil under behandlingen av forespørselen din. Vennligst prøv igjen senere. Hvis feilen vedvarer, send en e-post til hi@chatboxai.com for support.",
   "An error occurred while sending the message.": "Det oppsto en feil under sending av meldingen.",
@@ -64,6 +70,7 @@
   "Are you sure you want to delete the knowledge base": "Er du sikker på at du vil slette kunnskapsbasen",
   "Are you sure you want to delete this server?": "Er du sikker på at du vil slette denne serveren?",
   "Arguments": "Argumenter",
+  "Aspect Ratio": "Sideforhold",
   "assistant": "Assistent",
   "Attach Image": "Legg ved bilde",
   "Attach Link": "Legg ved lenke",
@@ -184,11 +191,14 @@
   "Create": "Opprett",
   "Create a New Conversation": "Opprett ny samtale",
   "Create a New Image-Creator Conversation": "Opprett en ny bildeskapersamtale",
+  "Create amazing images": "Lag fantastiske bilder",
   "Create File": "Opprett fil",
   "Create First Knowledge Base": "Opprett første kunnskapsbase",
+  "Create Image": "Opprett bilde",
   "Create Knowledge Base": "Opprett kunnskapsbase",
   "Create New Copilot": "Opprett ny Copilot",
   "Create your first knowledge base to start adding documents and enhance your AI conversations with contextual information.": "Opprett din første kunnskapsbase for å begynne å legge til dokumenter og forbedre dine AI-samtaler med kontekstuell informasjon.",
+  "Creating your masterpiece...": "Skaper ditt mesterverk...",
   "creative": "Kreativ",
   "Current conversation configured with specific model settings": "Gjeldende samtale konfigurert med spesifikke modellinnstillinger",
   "Current input": "Gjeldende inndata",
@@ -219,7 +229,11 @@
   "Delete Current Session": "Slett gjeldende økt",
   "Delete File": "Slett fil",
   "Delete Knowledge Base": "Slett kunnskapsbase",
+  "Delete this record?": "Slette denne oppføringen?",
   "Deploy HTML content to EdgeOne Pages and obtaining an accessible public URL.": "Utplassere HTML-innhold til EdgeOne Pages og oppnå en tilgjengelig offentlig URL.",
+  "Describe the image you want to create...": "Beskriv bildet du vil lage...",
+  "Describe the image you want to generate. Be as detailed as possible for best results.": "Beskriv bildet du vil generere. Vær så detaljert som mulig for best mulige resultater.",
+  "Describe your vision, and watch as AI transforms your words into stunning visual art.": "Beskriv din visjon, og se hvordan AI forvandler ordene dine til fantastisk visuell kunst.",
   "Description": "Beskrivelse",
   "Details": "Detaljer",
   "Diagnostic Logs": "Diagnostiske logger",
@@ -331,6 +345,7 @@
   "General Settings": "Generelle innstillinger",
   "Generate More Images Below": "Generer flere bilder nedenfor",
   "Generating summary...": "Genererer sammendrag...",
+  "Generation Failed": "Generering feilet",
   "Get API Key": "Få API-nøkkel",
   "Get API Token": "Hent API-token",
   "Get better connectivity and stability with the Chatbox desktop application. <a>Download now</a>.": "Få bedre kobling og stabilitet med Chatbox-skrivebordsappen. <a>Last ned nå</a>.",
@@ -344,7 +359,9 @@
   "Hate speech or harassment": "Hatefulle ytringer eller trakassering",
   "Here you can add and manage various custom model providers. As long as the provider's API is compatible with the selected API mode, you can seamlessly connect and use it within Chatbox.": "Her kan du legge til og administrere ulike egendefinerte modelltilbydere. Så lenge tilbyderens API er kompatibelt med den valgte API-modusen, kan du enkelt koble til og bruke den i Chatbox.",
   "Hide": "Skjul",
+  "Hide History": "Skjul historikk",
   "High": "Høy",
+  "History": "Historikk",
   "Home Page": "Hjemmeside",
   "Homepage": "Hjemmeside",
   "Hotkeys": "Snabbknappar",
@@ -357,6 +374,7 @@
   "Image Creator Intro": "Hei! Jeg er Chatbox Image Creator, din kunstneriske AI-følgesvenn som er dedikert til å gjøre om ordene dine til slående visuelle uttrykk. Hvis du kan drømme det, kan jeg skape det—fra fortryllende landskap og dynamiske karakterer til app-ikoner og det abstrakte.\n\nJeg er en stille robot, bare **fortell meg beskrivelsen av bildet du har i tankene**, og jeg vil fokusere alle pikslene mine på å forme din visjon.\n\nLa oss skape kunst!",
   "Image Quota": "Bildekvote",
   "Image Style": "Bildestil",
+  "Imagine Something New": "Forestill deg noe nytt",
   "Import and Restore": "Importer og gjenopprett",
   "Import Error": "Importfeil",
   "Import failed, unsupported data format": "Import mislyktes, ikke støttet dataformat",
@@ -380,6 +398,7 @@
   "Knowledge Base": "Kunnskapsbase",
   "Knowledge Base Debug": "Kunnskapsbase Feilsøking",
   "Knowledge Base functionality is not available on Windows ARM64 due to library compatibility issues. This feature is supported on Windows x64, macOS, and Linux.": "Kunnskapsbase-funksjonalitet er ikke tilgjengelig på Windows ARM64 på grunn av kompatibilitetsproblemer med biblioteker. Denne funksjonen støttes på Windows x64, macOS og Linux.",
+  "Landscape": "Liggende",
   "Language": "Språk",
   "Large file detected. Chunks will be loaded in batches of {{count}} to optimize performance.": "Stor fil oppdaget. Biter vil bli lastet i grupper på {{count}} for å optimalisere ytelsen.",
   "Last Session": "Siste økt",
@@ -395,6 +414,7 @@
   "Light Mode": "Lys modus",
   "Link Content": "Lenkeinnhold",
   "List Files": "Vis filer",
+  "Load More": "Last inn mer",
   "Load More Chunks": "Last inn flere biter",
   "Loading chunks...": "Laster inn biter...",
   "Loading files...": "Laster inn filer...",
@@ -469,6 +489,7 @@
   "network proxy error tips": "På grunn av proxy-adressen du har konfigurert som {{proxy}}, vennligst bekreft at proxy-serveren fungerer som den skal, eller vurder å fjerne proxy-adressen fra innstillingene.",
   "New": "Ny",
   "New Chat": "Ny chat",
+  "New Creation": "Ny kreasjon",
   "New Images": "Nye bilder",
   "New knowledge base name": "Nytt kunnskapsbasenavn",
   "New Thread": "Ny tråd",
@@ -482,6 +503,7 @@
   "No expiration": "Ingen utløpsdato",
   "No favorite models": "Ingen favorittmodeller",
   "No files were dropped": "Ingen filer ble sluppet",
+  "No history yet": "Ingen historikk ennå",
   "No Knowledge Base Yet": "Ingen kunnskapsbase ennå",
   "No licenses found. Please purchase a license to continue.": "Ingen lisenser funnet. Vennligst kjøp en lisens for å fortsette.",
   "No Limit": "Ingen grense",
@@ -532,6 +554,7 @@
   "Please select a model": "Vennligst velg en modell",
   "Please test before saving": "Vennligst test før lagring",
   "Please wait about 20 seconds": "Vennligst vent cirka 20 sekunder",
+  "Portrait": "Portrett",
   "pre-sale discount": "forhåndssalgsrabatt",
   "premium": "premium",
   "Premium Activation": "Premium-aktivering",
@@ -569,6 +592,8 @@
   "Recovering...": "Gjenoppretter...",
   "Recovery failed": "Gjenoppretting mislyktes",
   "RedNote": "Rødnotat",
+  "Reference": "Referanse",
+  "Reference Images": "Referansebilder",
   "Refresh": "Oppdater",
   "Regulate the volume of historical messages sent to the AI, striking a harmonious balance between depth of comprehension and the efficiency of responses.": "Reguler volumet av historiske meldinger sendt til AI, og finne en harmonisk balanse mellom dybden av forståelse og effektiviteten av svarene.",
   "Remaining/Total Quota": "Gjenstående/Total kvote",
@@ -645,6 +670,7 @@
   "Show all ({{x}})": "Vis alle ({{x}})",
   "Show Copilots in New Session": "Vis Medpiloter i ny økt",
   "show first token latency": "Vis første token-forsinkelse",
+  "Show History": "Vis historikk",
   "Show in Thread List": "Vis i trådlisten",
   "show message timestamp": "Vis tidsstempel for meldinger",
   "show message token count": "Vis antall tokens i meldinger",
@@ -664,6 +690,8 @@
   "Specific model settings": "Spesifikke modellinnstillinger",
   "Specific model settings configured for this conversation": "Spesifikke modellinnstillinger konfigurert for denne samtalen",
   "Spell Check": "Stavekontroll",
+  "Square": "Kvadrat",
+  "Standard": "Standard",
   "star": "Merk som favoritt",
   "Start a New Thread": "Start en ny tråd",
   "Start Setup": "Start oppsett",
@@ -765,8 +793,10 @@
   "Upgrade": "Oppgrader",
   "Upload failed: {{error}}": "Opplasting mislyktes: {{error}}",
   "Upload Image": "Last opp bilde",
+  "Upload Reference Image": "Last opp referansebilde",
   "Upload your first document to get started": "Last opp ditt første dokument for å komme i gang",
   "Upon import, changes will take effect immediately and existing data will be overwritten": "Ved import vil endringer tre i kraft umiddelbart og eksisterende data vil bli overskrevet",
+  "Use as Reference": "Bruk som referanse",
   "Use My Own API Key / Local Model": "Bruk min egen API-nøkkel / Lokal modell",
   "Use proxy to resolve CORS and other network issues": "Bruk proxy for å løse CORS og andre nettverksproblemer",
   "Use server parsing": "Bruk serveranalyse",
@@ -779,6 +809,7 @@
   "Uses built-in document parsing feature, supports common file types. Free usage, no compute points will be consumed.": "Bruker innebygd dokumentanalysefunksjon, støtter vanlige filtyper. Gratis bruk, ingen beregningspoeng vil forbrukes.",
   "version": "Versjon",
   "Video files are not supported": "Videofiler støttes ikke",
+  "View": "Vis",
   "View All Copilots": "Vis alle Copilots",
   "View Details": "Vis detaljer",
   "View historical threads": "Vis historiske tråder",
