--- a/src/renderer/i18n/locales/pt-PT/translation.json
+++ b/src/renderer/i18n/locales/pt-PT/translation.json
@@ -9,7 +9,10 @@
   "{{count}} file(s) not supported: {{files}}. Supported formats: {{formats}}": "{{count}} ficheiro(s) não suportado(s): {{files}}. Formatos suportados: {{formats}}",
   "{{count}} file(s) queued for server parsing": "{{count}} ficheiro(s) em fila para análise no servidor",
   "{{count}} MCP servers imported": "{{count}} servidores MCP importados",
+  "A cozy coffee shop interior": "Interior de uma cafetaria acolhedora",
+  "A futuristic city with flying cars": "Uma cidade futurista com carros voadores",
   "A provider with this ID already exists. Continuing will overwrite the existing configuration.": "Já existe um fornecedor com este ID. Ao continuar, a configuração existente será substituída.",
+  "A serene mountain landscape at sunset": "Uma paisagem de montanha serena ao pôr do sol",
   "About": "Sobre",
   "About Chatbox": "Sobre o Chatbox",
   "about-introduction": "Um cliente de desktop AI simples e fácil de usar, que suporta os mais avançados modelos de linguagem global, tornando a tecnologia de inteligência artificial de ponta numa ferramenta de produtividade acessível.",
@@ -27,6 +30,7 @@
   "Add MCP Server": "Adicionar MCP Server",
   "Add or Import": "Adicionar ou Importar",
   "Add provider": "Adicionar fornecedor",
+  "Add Reference Image": "Adicionar Imagem de Referência",
   "Add Server": "Adicionar Servidor",
   "Add your first MCP server": "Adicione o seu primeiro servidor MCP",
   "advanced": "avançado",
@@ -37,12 +41,14 @@
   "AI Model Provider": "Fornecedor do Modelo AI",
   "ai provider no implemented paint tips": "O fornecedor de AI atual ({{aiProvider}}) não suporta a funcionalidade de desenho, atualmente apenas Chatbox AI, OpenAI e Azure OpenAI suportam esta funcionalidade, se necessário, por favor <0>abra as configurações para alterar</0> o fornecedor de AI",
   "AI Settings": "Definições de AI",
+  "AI-generated images may not be accurate. Review output carefully.": "As imagens geradas por AI podem não ser precisas. Analise o resultado cuidadosamente.",
   "AIHubMix integration in Chatbox offers 10% discount": "A integração do AIHubMix no Chatbox oferece 10% de desconto",
   "All": "Todos",
   "All data is stored locally, ensuring privacy and rapid access": "Todos os dados são armazenados localmente, garantindo privacidade e acesso rápido",
   "All major AI models in one subscription": "Todos os principais modelos de IA em uma subscrição",
   "All threads": "Todos os Tópicos",
   "already existed": "já existe",
+  "An abstract painting with vibrant colors": "Uma pintura abstrata com cores vibrantes",
   "An easy-to-use AI client app": "Uma aplicação cliente de AI fácil de usar",
   "An error occurred while processing your request. Please try again later. If this error continues, please send an email to hi@chatboxai.com for support.": "Ocorreu um erro ao processar a sua solicitação. Por favor, tente novamente mais tarde. Se este erro continuar, por favor envie um e-mail para hi@chatboxai.com para obter suporte.",
   "An error occurred while sending the message.": "Ocorreu um erro ao enviar a mensagem.",
@@ -64,6 +70,7 @@
   "Are you sure you want to delete the knowledge base": "Tem a certeza que pretende eliminar a base de conhecimento",
   "Are you sure you want to delete this server?": "Tem a certeza que quer apagar este servidor?",
   "Arguments": "Argumentos",
+  "Aspect Ratio": "Relação de Aspeto",
   "assistant": "Assistente",
   "Attach Image": "Anexar Imagem",
   "Attach Link": "Anexar Link",
@@ -184,11 +191,14 @@
   "Create": "Criar",
   "Create a New Conversation": "Criar uma Nova Conversa",
   "Create a New Image-Creator Conversation": "Criar uma Nova Conversa de Criação de Imagens",
+  "Create amazing images": "Crie imagens incríveis",
   "Create File": "Criar Ficheiro",
   "Create First Knowledge Base": "Criar Primeira Base de Conhecimento",
+  "Create Image": "Criar Imagem",
   "Create Knowledge Base": "Criar Base de Conhecimento",
   "Create New Copilot": "Criar Novo Copiloto",
   "Create your first knowledge base to start adding documents and enhance your AI conversations with contextual information.": "Crie a sua primeira base de conhecimento para começar a adicionar documentos e melhorar as suas conversas de IA com informação contextual.",
+  "Creating your masterpiece...": "A criar a sua obra-prima...",
   "creative": "Criativo",
   "Current conversation configured with specific model settings": "Conversa atual configurada com definições específicas do modelo",
   "Current input": "Entrada atual",
@@ -219,7 +229,11 @@
   "Delete Current Session": "Eliminar a sessão atual",
   "Delete File": "Eliminar Ficheiro",
   "Delete Knowledge Base": "Eliminar Base de Conhecimento",
+  "Delete this record?": "Eliminar este registo?",
   "Deploy HTML content to EdgeOne Pages and obtaining an accessible public URL.": "Publicar conteúdo HTML para EdgeOne Pages e obter um URL público acessível.",
+  "Describe the image you want to create...": "Descreva a imagem que deseja criar...",
+  "Describe the image you want to generate. Be as detailed as possible for best results.": "Descreva a imagem que pretende gerar. Seja o mais detalhado possível para obter os melhores resultados.",
+  "Describe your vision, and watch as AI transforms your words into stunning visual art.": "Descreva a sua visão e veja como a AI transforma as suas palavras em arte visual deslumbrante.",
   "Description": "Descrição",
   "Details": "Detalhes",
   "Diagnostic Logs": "Registos de diagnóstico",
@@ -330,6 +344,7 @@
   "General Settings": "Definições Gerais",
   "Generate More Images Below": "Gerar Mais Imagens Abaixo",
   "Generating summary...": "A gerar resumo...",
+  "Generation Failed": "Falha na Geração",
   "Get API Key": "Obter Chave API",
   "Get API Token": "Obter Token da API",
   "Get better connectivity and stability with the Chatbox desktop application. <a>Download now</a>.": "Obtenha uma melhor conectividade e estabilidade com a aplicação Chatbox para desktop. <a>Baixe agora</a>.",
@@ -343,7 +358,9 @@
   "Hate speech or harassment": "Discurso de ódio ou assédio",
   "Here you can add and manage various custom model providers. As long as the provider's API is compatible with the selected API mode, you can seamlessly connect and use it within Chatbox.": "Aqui você pode adicionar e gerenciar vários fornecedores de modelos personalizados. Contanto que a API do fornecedor seja compatível com o modo de API selecionado, você pode conectá-lo e usá-lo sem problemas no Chatbox.",
   "Hide": "Ocultar",
+  "Hide History": "Ocultar Histórico",
   "High": "Alto",
+  "History": "Histórico",
   "Home Page": "Página Inicial",
   "Homepage": "Página inicial",
   "Hotkeys": "Atalhos de teclado",
@@ -356,6 +373,7 @@
   "Image Creator Intro": "Olá! Eu sou o Criador de Imagens Chatbox, a 'máquina impiedosa' de fazer imagens. Posso criar belas imagens com base na tua descrição, desde paisagens encantadoras até personagens vívidos, ícones de apps ou conceitos abstratos... (๑•́ ₃ •̀๑) Eh... sou um pouco introvertido, por isso **por favor, diz-me diretamente o que desejas visualizar**, e eu vou concentrar todos os meus pixels para realizar a tua imaginação. Agora, deixa a tua imaginação voar!",
   "Image Quota": "Quota de Imagem",
   "Image Style": "Estilo da Imagem",
+  "Imagine Something New": "Imagine Algo Novo",
   "Import and Restore": "Importar e Restaurar",
   "Import Error": "Erro de Importação",
   "Import failed, unsupported data format": "Falha na importação, formato de dados não suportado",
@@ -379,6 +397,7 @@
   "Knowledge Base": "Base de Conhecimento",
   "Knowledge Base Debug": "Depuração da Base de Conhecimento",
   "Knowledge Base functionality is not available on Windows ARM64 due to library compatibility issues. This feature is supported on Windows x64, macOS, and Linux.": "A funcionalidade da Base de Conhecimento não está disponível no Windows ARM64 devido a problemas de compatibilidade de bibliotecas. Esta funcionalidade é suportada no Windows x64, macOS e Linux.",
+  "Landscape": "Paisagem",
   "Language": "Língua",
   "Large file detected. Chunks will be loaded in batches of {{count}} to optimize performance.": "Ficheiro grande detetado. Os blocos serão carregados em lotes de {{count}} para otimizar o desempenho.",
   "Last Session": "Última Sessão",
@@ -394,6 +413,7 @@
   "Light Mode": "Modo Claro",
   "Link Content": "Conteúdo do Link",
   "List Files": "Listar Ficheiros",
+  "Load More": "Carregar mais",
   "Load More Chunks": "Carregar Mais Fragmentos",
   "Loading chunks...": "A carregar blocos...",
   "Loading files...": "A carregar ficheiros...",
@@ -468,6 +488,7 @@
   "network proxy error tips": "Devido ao endereço de proxy {{proxy}} que configurou, verifique se o servidor proxy está a funcionar corretamente ou considere eliminar o endereço de proxy nas definições.",
   "New": "Novo",
   "New Chat": "Nova conversa",
+  "New Creation": "Nova Criação",
   "New Images": "Novas Imagens",
   "New knowledge base name": "Nome da nova base de conhecimento",
   "New Thread": "Novo Tópico",
@@ -481,6 +502,7 @@
   "No expiration": "Sem validade",
   "No favorite models": "Nenhum modelo favorito",
   "No files were dropped": "Nenhum ficheiro foi largado",
+  "No history yet": "Ainda não há histórico",
   "No Knowledge Base Yet": "Ainda sem Base de Conhecimento",
   "No licenses found. Please purchase a license to continue.": "Nenhuma licença encontrada. Por favor, adquira uma licença para continuar.",
   "No Limit": "Sem Limite",
@@ -531,6 +553,7 @@
   "Please select a model": "Por favor, selecione um modelo",
   "Please test before saving": "Por favor, teste antes de guardar",
   "Please wait about 20 seconds": "Por favor, aguarde cerca de 20 segundos",
+  "Portrait": "Retrato",
   "pre-sale discount": "desconto pré-venda",
   "premium": "Edição Premium",
   "Premium Activation": "Ativação Premium",
@@ -568,6 +591,8 @@
   "Recovering...": "A recuperar...",
   "Recovery failed": "Recuperação falhou",
   "RedNote": "Nota Vermelha",
+  "Reference": "Referência",
+  "Reference Images": "Imagens de Referência",
   "Refresh": "Atualizar",
   "regenerate": "Regenerar",
   "Regulate the volume of historical messages sent to the AI, striking a harmonious balance between depth of comprehension and the efficiency of responses.": "Regule o volume das mensagens históricas enviadas à IA, encontrando um equilíbrio harmonioso entre a profundidade de compreensão e a eficiência das respostas.",
@@ -645,6 +670,7 @@
   "Show all ({{x}})": "Mostrar tudo ({{x}})",
   "Show Copilots in New Session": "Mostrar Copilots em Nova Sessão",
   "show first token latency": "Mostrar latência do primeiro token",
+  "Show History": "Mostrar Histórico",
   "Show in Thread List": "Mostrar na lista de tópicos",
   "show message timestamp": "Mostrar carimbo de data/hora da mensagem",
   "show message token count": "Mostrar contagem de tokens da mensagem",
@@ -663,6 +689,8 @@
   "Special thanks to the following sponsors:": "Um agradecimento especial aos seguintes patrocinadores:",
   "Specific model settings": "Definições específicas do modelo",
   "Spell Check": "Verificação Ortográfica",
+  "Square": "Quadrado",
+  "Standard": "Padrão",
   "star": "Favoritar",
   "Start a New Thread": "Começar um Novo Tópico",
   "Start Setup": "Iniciar Configuração",
@@ -764,8 +792,10 @@
   "Upgrade": "Atualizar",
   "Upload failed: {{error}}": "Carregamento falhou: {{error}}",
   "Upload Image": "Carregar Imagem",
+  "Upload Reference Image": "Carregar imagem de referência",
   "Upload your first document to get started": "Carregue o seu primeiro documento para começar",
   "Upon import, changes will take effect immediately and existing data will be overwritten": "Após a importação, as alterações terão efeito imediato e os dados existentes serão sobrescritos",
+  "Use as Reference": "Usar como referência",
   "Use My Own API Key / Local Model": "Usar minha própria API Key / Modelo Local",
   "Use proxy to resolve CORS and other network issues": "Usar proxy para resolver problemas de CORS e outros problemas de rede",
   "Use server parsing": "Utilizar análise no servidor",
@@ -778,6 +808,7 @@
   "Uses built-in document parsing feature, supports common file types. Free usage, no compute points will be consumed.": "Utiliza a funcionalidade de análise de documentos integrada, suporta tipos de ficheiro comuns. Utilização gratuita, não serão consumidos pontos de computação.",
   "version": "Versão",
   "Video files are not supported": "Ficheiros de vídeo não são suportados",
+  "View": "Ver",
   "View All Copilots": "Ver Todos os Copilotos",
   "View Details": "Detalhes",
   "View historical threads": "Ver tópicos históricos",
