--- a/src/renderer/i18n/locales/sv/translation.json
+++ b/src/renderer/i18n/locales/sv/translation.json
@@ -9,7 +9,10 @@
   "{{count}} file(s) not supported: {{files}}. Supported formats: {{formats}}": "{{count}} fil(er) stöds inte: {{files}}. Format som stöds: {{formats}}",
   "{{count}} file(s) queued for server parsing": "{{count}} fil(er) har köats för serverbearbetning",
   "{{count}} MCP servers imported": "{{count}} MCP servrar importerade",
+  "A cozy coffee shop interior": "En mysig kaféinteriör",
+  "A futuristic city with flying cars": "En futuristisk stad med flygande bilar",
   "A provider with this ID already exists. Continuing will overwrite the existing configuration.": "En leverantör med detta ID finns redan. Om du fortsätter kommer den befintliga konfigurationen att skrivas över.",
+  "A serene mountain landscape at sunset": "Ett fridfullt bergslandskap vid solnedgången",
   "About": "Om",
   "About Chatbox": "Om Chatbox",
   "about-introduction": "En användarvänlig AI-skrivbordsapplikation som stöder flera avancerade AI-modeller och förvandlar banbrytande artificiell intelligens till ett lättanvänt produktivitetsverktyg.",
@@ -27,6 +30,7 @@
   "Add MCP Server": "Lägg till MCP Server",
   "Add or Import": "Lägg till eller Importera",
   "Add provider": "Lägg till leverantör",
+  "Add Reference Image": "Lägg till referensbild",
   "Add Server": "Lägg till server",
   "Add your first MCP server": "Lägg till din första MCP server",
   "advanced": "Avancerat",
@@ -37,12 +41,14 @@
   "AI Model Provider": "AI-modellleverantör",
   "ai provider no implemented paint tips": "Den nuvarande AI-modellleverantören ({{aiProvider}}) stöder inte bildskapande funktioner för tillfället. För närvarande erbjuder endast Chatbox AI, OpenAI och Azure OpenAI denna funktion. Vid behov, vänligen <0>gå till inställningar</0> och byt AI-modellleverantör.",
   "AI Settings": "AI-inställningar",
+  "AI-generated images may not be accurate. Review output carefully.": "AI-genererade bilder kan vara felaktiga. Granska resultatet noggrant.",
   "AIHubMix integration in Chatbox offers 10% discount": "AIHubMix-integration i Chatbox erbjuder 10% rabatt",
   "All": "Alla",
   "All data is stored locally, ensuring privacy and rapid access": "All data lagras lokalt, vilket säkerställer integritet och snabb åtkomst",
   "All major AI models in one subscription": "Alla stora AI-modeller i en prenumeration",
   "All threads": "Alla trådar",
   "already existed": "finns redan",
+  "An abstract painting with vibrant colors": "En abstrakt målning med livfulla färger",
   "An easy-to-use AI client app": "En lättanvänd AI-klientapp",
   "An error occurred while processing your request. Please try again later. If this error continues, please send an email to hi@chatboxai.com for support.": "Ett fel uppstod vid behandling av din förfrågan. Försök igen senare. Om felet kvarstår, vänligen skicka ett e-postmeddelande till hi@chatboxai.com för support.",
   "An error occurred while sending the message.": "Ett fel uppstod vid sändning av meddelandet.",
@@ -64,6 +70,7 @@
   "Are you sure you want to delete the knowledge base": "Är du säker på att du vill ta bort kunskapsbasen",
   "Are you sure you want to delete this server?": "Är du säker på att du vill radera den här servern?",
   "Arguments": "Argument",
+  "Aspect Ratio": "Bildförhållande",
   "assistant": "Assistent",
   "Attach Image": "Bifoga bild",
   "Attach Link": "Bifoga länk",
@@ -184,11 +191,14 @@
   "Create": "Skapa",
   "Create a New Conversation": "Skapa ny konversation",
   "Create a New Image-Creator Conversation": "Skapa ny bildskaparkonversation",
+  "Create amazing images": "Skapa fantastiska bilder",
   "Create File": "Skapa fil",
   "Create First Knowledge Base": "Skapa Första Kunskapsbasen",
+  "Create Image": "Skapa bild",
   "Create Knowledge Base": "Skapa kunskapsbas",
   "Create New Copilot": "Skapa ny Copilot",
   "Create your first knowledge base to start adding documents and enhance your AI conversations with contextual information.": "Skapa din första kunskapsbas för att börja lägga till dokument och förbättra dina AI-konversationer med kontextuell information.",
+  "Creating your masterpiece...": "Skapar ditt mästerverk...",
   "creative": "Kreativ",
   "Current conversation configured with specific model settings": "Nuvarande konversation konfigurerad med specifika modellinställningar",
   "Current input": "Nuvarande inmatning",
@@ -219,7 +229,11 @@
   "Delete Current Session": "Radera aktuell session",
   "Delete File": "Ta bort fil",
   "Delete Knowledge Base": "Radera Kunskapsbas",
+  "Delete this record?": "Radera denna post?",
   "Deploy HTML content to EdgeOne Pages and obtaining an accessible public URL.": "Distribuera HTML-innehåll till EdgeOne Pages och erhålla en tillgänglig offentlig URL.",
+  "Describe the image you want to create...": "Beskriv bilden du vill skapa...",
+  "Describe the image you want to generate. Be as detailed as possible for best results.": "Beskriv bilden du vill generera. Var så detaljerad som möjligt för bästa resultat.",
+  "Describe your vision, and watch as AI transforms your words into stunning visual art.": "Beskriv din vision och se hur AI förvandlar dina ord till fantastisk bildkonst.",
   "Description": "Beskrivning",
   "Details": "Detaljer",
   "Diagnostic Logs": "Diagnostiska loggar",
@@ -331,6 +345,7 @@
   "General Settings": "Allmänna inställningar",
   "Generate More Images Below": "Generera fler bilder nedan",
   "Generating summary...": "Genererar sammanfattning...",
+  "Generation Failed": "Generering misslyckades",
   "Get API Key": "Hämta API-nyckel",
   "Get API Token": "Hämta API Token",
   "Get better connectivity and stability with the Chatbox desktop application. <a>Download now</a>.": "Få bättre anslutning och stabilitet med Chatbox-skrivbordsappen. <a>Ladda ner nu</a>.",
@@ -344,7 +359,9 @@
   "Hate speech or harassment": "Hatiskt tal eller trakasserier",
   "Here you can add and manage various custom model providers. As long as the provider's API is compatible with the selected API mode, you can seamlessly connect and use it within Chatbox.": "Här kan du lägga till och hantera olika anpassade modellleverantörer. Så länge leverantörens API är kompatibelt med det valda API-läget kan du sömlöst ansluta och använda det i Chatbox.",
   "Hide": "Dölj",
+  "Hide History": "Dölj historik",
   "High": "Hög",
+  "History": "Historik",
   "Home Page": "Startsida",
   "Homepage": "Hemsida",
   "Hotkeys": "Snabbknappar",
@@ -357,6 +374,7 @@
   "Image Creator Intro": "Hej! Jag är Chatbox Bildskapare, din konstnärliga AI-följeslagare som omvandlar dina ord till slående bilder. Om du kan drömma det kan jag skapa det - från förtrollande landskap och dynamiska karaktärer till app-ikoner och bortom det abstrakta.\n\nJag är en tyst robot, **berätta bara för mig hur bilden du har i åtanke ser ut**, så fokuserar jag alla mina pixlar på att förverkliga din vision.\n\nLåt oss skapa konst!",
   "Image Quota": "Bildkvota",
   "Image Style": "Bildstil",
+  "Imagine Something New": "Föreställ dig något nytt",
   "Import and Restore": "Importera och återställ",
   "Import Error": "Importfel",
   "Import failed, unsupported data format": "Importen misslyckades, formatet stöds inte",
@@ -380,6 +398,7 @@
   "Knowledge Base": "Kunskapsbas",
   "Knowledge Base Debug": "Kunskapsbas Felsökning",
   "Knowledge Base functionality is not available on Windows ARM64 due to library compatibility issues. This feature is supported on Windows x64, macOS, and Linux.": "Kunskapsbas-funktionalitet är inte tillgänglig på Windows ARM64 på grund av bibliotekskompatibilitetsproblem. Denna funktion stöds på Windows x64, macOS och Linux.",
+  "Landscape": "Liggande",
   "Language": "Språk",
   "Large file detected. Chunks will be loaded in batches of {{count}} to optimize performance.": "Stor fil upptäcktes. Segment kommer att laddas i omgångar om {{count}} för att optimera prestanda.",
   "Last Session": "Senaste sessionen",
@@ -395,6 +414,7 @@
   "Light Mode": "Ljust läge",
   "Link Content": "Länkinnehåll",
   "List Files": "Lista Filer",
+  "Load More": "Ladda fler",
   "Load More Chunks": "Ladda fler delar",
   "Loading chunks...": "Laddar segment...",
   "Loading files...": "Laddar filer...",
@@ -469,6 +489,7 @@
   "network proxy error tips": "På grund av proxyadressen du har konfigurerat som {{proxy}}, vänligen verifiera om proxyservern fungerar korrekt, eller överväg att ta bort proxyadressen från inställningarna.",
   "New": "Ny",
   "New Chat": "Ny chatt",
+  "New Creation": "Ny skapelse",
   "New Images": "Nya bilder",
   "New knowledge base name": "Nytt kunskapsbasnamn",
   "New Thread": "Ny tråd",
@@ -482,6 +503,7 @@
   "No expiration": "Inget utgångsdatum",
   "No favorite models": "Inga favoritmodeller",
   "No files were dropped": "Inga filer släpptes",
+  "No history yet": "Ingen historik ännu",
   "No Knowledge Base Yet": "Ingen kunskapsbas ännu",
   "No licenses found. Please purchase a license to continue.": "Inga licenser hittades. Vänligen köp en licens för att fortsätta.",
   "No Limit": "Ingen gräns",
@@ -532,6 +554,7 @@
   "Please select a model": "Välj en modell",
   "Please test before saving": "Testa innan du sparar",
   "Please wait about 20 seconds": "Vänta cirka 20 sekunder",
+  "Portrait": "Porträtt",
   "pre-sale discount": "förköpsrabatt",
   "premium": "premium",
   "Premium Activation": "Premiumaktivering",
@@ -569,6 +592,8 @@
   "Recovering...": "Återställer...",
   "Recovery failed": "Återställning misslyckades",
   "RedNote": "Rödanteckning",
+  "Reference": "Referens",
+  "Reference Images": "Referensbilder",
   "Refresh": "Uppdatera",
   "Regulate the volume of historical messages sent to the AI, striking a harmonious balance between depth of comprehension and the efficiency of responses.": "Reglera volymen av historiska meddelanden som skickas till AI, och skapa en harmonisk balans mellan djupet av förståelse och effektiviteten av svaren.",
   "Remaining/Total Quota": "Återstående/Total kvot",
@@ -645,6 +670,7 @@
   "Show all ({{x}})": "Visa alla ({{x}})",
   "Show Copilots in New Session": "Visa Copilots i ny session",
   "show first token latency": "Visa första token fördröjning",
+  "Show History": "Visa historik",
   "Show in Thread List": "Visa i trådlistan",
   "show message timestamp": "Visa meddelandestampel",
   "show message token count": "Visa meddelande tokenantal",
@@ -664,6 +690,8 @@
   "Specific model settings": "Specifika modellinställningar",
   "Specific model settings configured for this conversation": "Specifika modellinställningar konfigurerade för denna konversation",
   "Spell Check": "Stavningskontroll",
+  "Square": "Kvadratisk",
+  "Standard": "Standard",
   "star": "Stjärnmärk",
   "Start a New Thread": "Starta ny tråd",
   "Start Setup": "Starta installation",
@@ -766,8 +794,10 @@
   "Upgrade": "Uppgradera",
   "Upload failed: {{error}}": "Uppladdning misslyckades: {{error}}",
   "Upload Image": "Ladda upp bild",
+  "Upload Reference Image": "Ladda upp referensbild",
   "Upload your first document to get started": "Ladda upp ditt första dokument för att komma igång",
   "Upon import, changes will take effect immediately and existing data will be overwritten": "Vid import kommer ändringarna att träda i kraft omedelbart och befintlig data kommer att skrivas över",
+  "Use as Reference": "Använd som referens",
   "Use My Own API Key / Local Model": "Använd min egen API-nyckel / Lokal modell",
   "Use proxy to resolve CORS and other network issues": "Använd proxy för att lösa CORS och andra nätverksproblem",
   "Use server parsing": "Använd serverparsning",
@@ -780,6 +810,7 @@
   "Uses built-in document parsing feature, supports common file types. Free usage, no compute points will be consumed.": "Använder inbyggd dokumentparserfunktion, stöder vanliga filtyper. Gratis användning, inga beräkningspoäng förbrukas.",
   "version": "Version",
   "Video files are not supported": "Videofiler stöds inte",
+  "View": "Visa",
   "View All Copilots": "Visa alla Copilots",
   "View Details": "Visa detaljer",
   "View historical threads": "Visa trådhistorik",
