--- a/src/renderer/i18n/locales/zh-Hans/translation.json
+++ b/src/renderer/i18n/locales/zh-Hans/translation.json
@@ -9,7 +9,10 @@
   "{{count}} file(s) not supported: {{files}}. Supported formats: {{formats}}": "{{count}} 个文件不支持：{{files}}。支持的格式：{{formats}}",
   "{{count}} file(s) queued for server parsing": "{{count}} 个文件已加入服务器解析队列",
   "{{count}} MCP servers imported": "{{count}} 个 MCP 服务器已导入",
+  "A cozy coffee shop interior": "温馨的咖啡馆室内",
+  "A futuristic city with flying cars": "拥有飞行汽车的未来城市",
   "A provider with this ID already exists. Continuing will overwrite the existing configuration.": "此ID的提供方已存在。继续将覆盖现有配置。",
+  "A serene mountain landscape at sunset": "宁静的日落山景",
   "About": "关于",
   "About Chatbox": "版本信息",
   "about-introduction": "一个简约强大的 AI 桌面客户端，支持最先进的多款大语言模型，让前沿的人工智能技术变成易于使用的生产力工具。",
@@ -27,6 +30,8 @@
   "Add MCP Server": "添加 MCP Server",
   "Add or Import": "添加或导入",
   "Add provider": "添加模型提供方",
+  "Add reference image": "添加参考图片",
+  "Add Reference Image": "添加参考图",
   "Add Server": "添加服务器",
   "Add your first MCP server": "添加您的第一个 MCP 服务器",
   "advanced": "其他",
@@ -37,12 +42,14 @@
   "AI Model Provider": "AI 模型提供方",
   "ai provider no implemented paint tips": "当前 AI 模型提供方（{{aiProvider}}）暂时不支持绘图功能，目前仅 Chatbox AI、 OpenAI 与 Azure OpenAI 支持该功能，如有需要请<0>打开设置切换</0> AI 模型提供方",
   "AI Settings": "AI 设置",
+  "AI-generated images may not be accurate. Review output carefully.": "AI 生成的图像可能不准确。请仔细核对输出内容。",
   "AIHubMix integration in Chatbox offers 10% discount": "在Chatbox中接入AIHubMix可享受10%优惠",
   "All": "全部",
   "All data is stored locally, ensuring privacy and rapid access": "所有数据都存储在本地，确保隐私和快速访问",
   "All major AI models in one subscription": "一个订阅高速访问所有主流 AI 模型",
   "All threads": "所有话题",
   "already existed": "已存在",
+  "An abstract painting with vibrant colors": "色彩鲜艳的抽象画",
   "An easy-to-use AI client app": "一个简单易用的 AI 客户端应用",
   "An error occurred while processing your request. Please try again later. If this error continues, please send an email to hi@chatboxai.com for support.": "处理您的请求时发生错误。请稍后再试。如果此错误持续发生，请发送电子邮件至 hi@chatboxai.com 以获得支持。",
   "An error occurred while sending the message.": "消息发送失败。",
@@ -64,6 +71,7 @@
   "Are you sure you want to delete the knowledge base": "你确定要删除知识库吗",
   "Are you sure you want to delete this server?": "你确定要删除这个服务器吗？",
   "Arguments": "参数",
+  "Aspect Ratio": "宽高比",
   "assistant": "助手",
   "Attach Image": "添加图片",
   "Attach Link": "添加链接",
@@ -184,11 +192,15 @@
   "Create": "创建",
   "Create a New Conversation": "创建新的对话",
   "Create a New Image-Creator Conversation": "创建新的图片生成对话",
+  "Create amazing images": "创作惊艳的图片",
+  "Create beautiful images with AI": "用 AI 创作精美图片",
   "Create File": "创建文件",
   "Create First Knowledge Base": "创建首个知识库",
+  "Create Image": "生成图片",
   "Create Knowledge Base": "创建知识库",
   "Create New Copilot": "创建新的AI搭档",
   "Create your first knowledge base to start adding documents and enhance your AI conversations with contextual information.": "创建您的第一个知识库，开始添加文档，并通过上下文信息增强您的 AI 对话。",
+  "Creating your masterpiece...": "正在创作您的杰作...",
   "creative": "想象发散",
   "Current conversation configured with specific model settings": "当前的对话配置了特定的模型设置",
   "Current input": "当前输入",
@@ -219,7 +231,11 @@
   "Delete Current Session": "删除当前会话",
   "Delete File": "删除文件",
   "Delete Knowledge Base": "删除知识库",
+  "Delete this record?": "删除这条记录？",
   "Deploy HTML content to EdgeOne Pages and obtaining an accessible public URL.": "部署 HTML 内容到 EdgeOne Pages 并获取一个可访问的公共 URL。",
+  "Describe the image you want to create...": "描述你想要创建的图片...",
+  "Describe the image you want to generate. Be as detailed as possible for best results.": "描述你想要生成的图像。为了获得最佳效果，请提供尽可能详细的描述。",
+  "Describe your vision, and watch as AI transforms your words into stunning visual art.": "描述你的构想，见证 AI 将文字转化为惊艳的视觉艺术。",
   "Description": "描述",
   "Details": "详情",
   "Diagnostic Logs": "诊断日志",
@@ -264,6 +280,7 @@
   "Ending with / ignores v1, ending with # forces use of input address": "以 / 结尾会忽略 v1，以 # 结尾强制使用输入地址",
   "Enjoying Chatbox?": "喜欢 Chatbox 吗？",
   "Enter": "回车键",
+  "Enter a prompt below to get started": "在下方输入提示词开始创作",
   "Enter your MinerU API token": "输入您的 MinerU API token",
   "Environment Variables": "环境变量",
   "Error Reporting": "错误报告",
@@ -331,6 +348,7 @@
   "General Settings": "常规设置",
   "Generate More Images Below": "在下方生成更多图片",
   "Generating summary...": "正在生成摘要...",
+  "Generation Failed": "生成失败",
   "Get API Key": "获取 API 密钥",
   "Get API Token": "获取 API Token",
   "Get better connectivity and stability with the Chatbox desktop application. <a>Download now</a>.": "使用 Chatbox 桌面版获得更好的连接性和稳定性。<a>立即下载</a>。",
@@ -344,7 +362,9 @@
   "Hate speech or harassment": "仇恨言论或骚扰",
   "Here you can add and manage various custom model providers. As long as the provider's API is compatible with the selected API mode, you can seamlessly connect and use it within Chatbox.": "在这里，您可以添加和管理各种自定义模型提供方。只要提供方的 API 与所选的 API 模式兼容，您就可以在 Chatbox 中无缝连接和使用它。",
   "Hide": "隐藏",
+  "Hide History": "隐藏历史记录",
   "High": "高",
+  "History": "历史记录",
   "Home Page": "主页",
   "Homepage": "首页",
   "Hotkeys": "快捷键",
@@ -353,10 +373,11 @@
   "Ideal for both work and educational scenarios": "适用于工作和教育场景",
   "Ideal for work and study": "适用于办公与学习场景",
   "If conversations are missing from the list, use this feature to scan and recover them from storage": "如果对话列表中缺少对话，可以使用此功能从存储中扫描并恢复它们",
-  "Image Creator": "图片创建器",
+  "Image Creator": "图片生成器",
   "Image Creator Intro": "Hi！我是 Chatbox Image Creator，“无情”的图片制造机。我可以根据你的描述生成精美图片，只要你能想象得到，我就能创造出来——迷人的风景、生动的角色、App 图标、或者抽象的构思……\n\n(๑•́ ₃ •̀๑) 额…我是一个有点自闭的机器人，所以**请直接告诉我你想要图片的文字描述**，我会集中我所有的像素去实现你的想象。\n\n现在请发挥你的想象力吧！",
   "Image Quota": "图片配额",
   "Image Style": "图片风格",
+  "Imagine Something New": "想象新创意",
   "Import and Restore": "导入与恢复",
   "Import Error": "导入错误",
   "Import failed, unsupported data format": "导入失败，数据格式不支持",
@@ -380,6 +401,7 @@
   "Knowledge Base": "知识库",
   "Knowledge Base Debug": "知识库调试",
   "Knowledge Base functionality is not available on Windows ARM64 due to library compatibility issues. This feature is supported on Windows x64, macOS, and Linux.": "由于库兼容性问题，知识库功能在 Windows ARM64 上不可用。此功能在 Windows x64、macOS 和 Linux 上可用。",
+  "Landscape": "大横向",
   "Language": "语言",
   "Large file detected. Chunks will be loaded in batches of {{count}} to optimize performance.": "检测到大文件。为优化性能，将分批加载 {{count}} 个分块。",
   "Last Session": "上次会话",
@@ -395,6 +417,7 @@
   "Light Mode": "浅色模式",
   "Link Content": "链接内容",
   "List Files": "列出文件",
+  "Load More": "加载更多",
   "Load More Chunks": "加载更多分块",
   "Loading chunks...": "加载分块中...",
   "Loading files...": "正在加载文件...",
@@ -469,6 +492,7 @@
   "network proxy error tips": "因为你设置了代理地址 {{proxy}}，请检查代理服务器是否正常工作，或者考虑在设置中删除代理地址。",
   "New": "新建",
   "New Chat": "新对话",
+  "New Creation": "新建创作",
   "New Images": "新图片",
   "New knowledge base name": "新知识库名称",
   "New Thread": "新话题",
@@ -482,6 +506,7 @@
   "No expiration": "永不失效",
   "No favorite models": "没有收藏的模型",
   "No files were dropped": "未拖放任何文件",
+  "No history yet": "暂无历史记录",
   "No Knowledge Base Yet": "暂无知识库",
   "No licenses found. Please purchase a license to continue.": "没有找到许可证。请购买许可证以继续。",
   "No Limit": "不限制",
@@ -537,6 +562,7 @@
   "Please select a model": "请选择模型",
   "Please test before saving": "保存前请测试",
   "Please wait about 20 seconds": "请等待约20秒",
+  "Portrait": "纵向",
   "pre-sale discount": "预售折扣",
   "premium": "专业版",
   "Premium Activation": "专业版激活",
@@ -574,6 +600,8 @@
   "Recovering...": "正在恢复...",
   "Recovery failed": "恢复失败",
   "RedNote": "小红书",
+  "Reference": "参考",
+  "Reference Images": "参考图片",
   "Refresh": "刷新",
   "regenerate": "重新生成",
   "Regulate the volume of historical messages sent to the AI, striking a harmonious balance between depth of comprehension and the efficiency of responses.": "调整发送给AI的历史消息的数量，在理解深度和响应效率之间找到和谐的平衡。",
@@ -653,6 +681,7 @@
   "Show all ({{x}})": "显示全部 ({{x}})",
   "Show Copilots in New Session": "在新对话中显示我的搭档",
   "show first token latency": "显示首字耗时",
+  "Show History": "显示历史",
   "Show in Thread List": "在话题列表中显示",
   "show message timestamp": "显示消息的时间戳",
   "show message token count": "显示消息的 token 数量",
@@ -672,6 +701,8 @@
   "Special thanks to the following sponsors:": "特别鸣谢以下品牌的赞助:",
   "Specific model settings": "特定模型设置",
   "Spell Check": "拼写检查",
+  "Square": "正方形",
+  "Standard": "标准",
   "star": "星标",
   "Start a New Thread": "新话题",
   "Start Setup": "开始设置",
@@ -776,8 +807,10 @@
   "Upgrade": "升级",
   "Upload failed: {{error}}": "上传失败：{{error}}",
   "Upload Image": "上传图片",
+  "Upload Reference Image": "上传参考图片",
   "Upload your first document to get started": "上传您的第一个文档即可开始",
   "Upon import, changes will take effect immediately and existing data will be overwritten": "导入后将直接生效，原有数据将被覆盖",
+  "Use as Reference": "作为参考图",
   "Use default (first model)": "使用默认（第一个模型）",
   "Use My Own API Key / Local Model": "使用自己的 API Key 或本地模型",
   "Use proxy to resolve CORS and other network issues": "使用代理解决 CORS 和其他网络问题",
@@ -791,6 +824,7 @@
   "Uses built-in document parsing feature, supports common file types. Free usage, no compute points will be consumed.": "使用内置文档解析功能，支持常见文件类型。免费使用，不消耗计算点数。",
   "version": "版本",
   "Video files are not supported": "视频文件不支持",
+  "View": "查看",
   "View All Copilots": "查看所有搭档",
   "View Details": "查看详情",
   "View historical threads": "查看历史话题",
